@@ -15,7 +15,6 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-
 package org.apache.hadoop.hbase;
 
 import static org.junit.Assert.assertEquals;
@@ -27,22 +26,27 @@ import java.io.IOException;
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
 import java.util.List;
-
-import org.apache.commons.logging.Log;
-import org.apache.commons.logging.LogFactory;
 import org.apache.hadoop.conf.Configuration;
+import org.apache.hadoop.hbase.security.User;
 import org.apache.hadoop.hbase.testclassification.MiscTests;
 import org.apache.hadoop.hbase.testclassification.SmallTests;
 import org.junit.AfterClass;
+import org.junit.Assert;
+import org.junit.ClassRule;
 import org.junit.Test;
 import org.junit.experimental.categories.Category;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
-import org.apache.hadoop.hbase.shaded.com.google.common.collect.ImmutableMap;
+import org.apache.hbase.thirdparty.com.google.common.collect.ImmutableMap;
 
 @Category({MiscTests.class, SmallTests.class})
 public class TestHBaseConfiguration {
+  @ClassRule
+  public static final HBaseClassTestRule CLASS_RULE =
+      HBaseClassTestRule.forClass(TestHBaseConfiguration.class);
 
-  private static final Log LOG = LogFactory.getLog(TestHBaseConfiguration.class);
+  private static final Logger LOG = LoggerFactory.getLogger(TestHBaseConfiguration.class);
 
   private static HBaseCommonTestingUtility UTIL = new HBaseCommonTestingUtility();
 
@@ -52,32 +56,7 @@ public class TestHBaseConfiguration {
   }
 
   @Test
-  public void testGetIntDeprecated() {
-    int VAL = 1, VAL2 = 2;
-    String NAME = "foo";
-    String DEPRECATED_NAME = "foo.deprecated";
-
-    Configuration conf = HBaseConfiguration.create();
-    conf.setInt(NAME, VAL);
-    assertEquals(VAL, HBaseConfiguration.getInt(conf, NAME, DEPRECATED_NAME, 0));
-
-    conf = HBaseConfiguration.create();
-    conf.setInt(DEPRECATED_NAME, VAL);
-    assertEquals(VAL, HBaseConfiguration.getInt(conf, NAME, DEPRECATED_NAME, 0));
-
-    conf = HBaseConfiguration.create();
-    conf.setInt(DEPRECATED_NAME, VAL);
-    conf.setInt(NAME, VAL);
-    assertEquals(VAL, HBaseConfiguration.getInt(conf, NAME, DEPRECATED_NAME, 0));
-
-    conf = HBaseConfiguration.create();
-    conf.setInt(DEPRECATED_NAME, VAL);
-    conf.setInt(NAME, VAL2); // deprecated value will override this
-    assertEquals(VAL, HBaseConfiguration.getInt(conf, NAME, DEPRECATED_NAME, 0));
-  }
-
-  @Test
-  public void testSubset() throws Exception {
+  public void testSubset() {
     Configuration conf = HBaseConfiguration.create();
     // subset is used in TableMapReduceUtil#initCredentials to support different security
     // configurations between source and destination clusters, so we'll use that as an example
@@ -124,6 +103,36 @@ public class TestHBaseConfiguration {
     }
   }
 
+  @Test
+  public void testSecurityConfCaseInsensitive() {
+    Configuration conf = HBaseConfiguration.create();
+    conf.set("hbase.security.authentication", "kerberos");
+    Assert.assertTrue(User.isHBaseSecurityEnabled(conf));
+
+    conf.set("hbase.security.authentication", "KERBEROS");
+    Assert.assertTrue(User.isHBaseSecurityEnabled(conf));
+
+    conf.set("hbase.security.authentication", "KERBeros");
+    Assert.assertTrue(User.isHBaseSecurityEnabled(conf));
+  }
+
+  @Test
+  public void testGetConfigOfShortcircuitRead() throws Exception {
+    Configuration conf = HBaseConfiguration.create();
+    Configuration.addDefaultResource("hdfs-scr-disabled.xml");
+    assertEquals("hdfs-scr-disabled.xml",
+            conf.getPropertySources("dfs.client.read.shortcircuit")[0]);
+    assertEquals("false", conf.get("dfs.client.read.shortcircuit"));
+    assertNull(conf.get("dfs.domain.socket.path"));
+    Configuration.addDefaultResource("hdfs-scr-enabled.xml");
+    assertEquals("hdfs-scr-enabled.xml",
+            conf.getPropertySources("dfs.client.read.shortcircuit")[0]);
+    assertEquals("hdfs-scr-enabled.xml",
+            conf.getPropertySources("dfs.domain.socket.path")[0]);
+    assertEquals("true", conf.get("dfs.client.read.shortcircuit"));
+    assertEquals("/var/lib/hadoop-hdfs/dn_socket", conf.get("dfs.domain.socket.path"));
+  }
+
   private static class ReflectiveCredentialProviderClient {
     public static final String HADOOP_CRED_PROVIDER_FACTORY_CLASS_NAME =
         "org.apache.hadoop.security.alias.JavaKeyStoreProvider$Factory";
@@ -152,7 +161,6 @@ public class TestHBaseConfiguration {
 
     private static Object hadoopCredProviderFactory = null;
     private static Method getProvidersMethod = null;
-    private static Method getAliasesMethod = null;
     private static Method getCredentialEntryMethod = null;
     private static Method getCredentialMethod = null;
     private static Method createCredentialEntryMethod = null;
@@ -183,7 +191,7 @@ public class TestHBaseConfiguration {
       hadoopClassesAvailable = false;
 
       // Load Hadoop CredentialProviderFactory
-      Class<?> hadoopCredProviderFactoryClz = null;
+      Class<?> hadoopCredProviderFactoryClz;
       try {
         hadoopCredProviderFactoryClz = Class
             .forName(HADOOP_CRED_PROVIDER_FACTORY_CLASS_NAME);
@@ -192,10 +200,9 @@ public class TestHBaseConfiguration {
       }
       // Instantiate Hadoop CredentialProviderFactory
       try {
-        hadoopCredProviderFactory = hadoopCredProviderFactoryClz.newInstance();
-      } catch (InstantiationException e) {
-        return false;
-      } catch (IllegalAccessException e) {
+        hadoopCredProviderFactory =
+          hadoopCredProviderFactoryClz.getDeclaredConstructor().newInstance();
+      } catch (Exception e) {
         return false;
       }
 
@@ -204,13 +211,13 @@ public class TestHBaseConfiguration {
             HADOOP_CRED_PROVIDER_FACTORY_GET_PROVIDERS_METHOD_NAME,
             Configuration.class);
         // Load Hadoop CredentialProvider
-        Class<?> hadoopCredProviderClz = null;
+        Class<?> hadoopCredProviderClz;
         hadoopCredProviderClz = Class.forName(HADOOP_CRED_PROVIDER_CLASS_NAME);
         getCredentialEntryMethod = loadMethod(hadoopCredProviderClz,
             HADOOP_CRED_PROVIDER_GET_CREDENTIAL_ENTRY_METHOD_NAME, String.class);
 
-        getAliasesMethod = loadMethod(hadoopCredProviderClz,
-            HADOOP_CRED_PROVIDER_GET_ALIASES_METHOD_NAME);
+        Method getAliasesMethod =
+          loadMethod(hadoopCredProviderClz, HADOOP_CRED_PROVIDER_GET_ALIASES_METHOD_NAME);
 
         createCredentialEntryMethod = loadMethod(hadoopCredProviderClz,
             HADOOP_CRED_PROVIDER_CREATE_CREDENTIAL_ENTRY_METHOD_NAME,
@@ -220,7 +227,7 @@ public class TestHBaseConfiguration {
             HADOOP_CRED_PROVIDER_FLUSH_METHOD_NAME);
 
         // Load Hadoop CredentialEntry
-        Class<?> hadoopCredentialEntryClz = null;
+        Class<?> hadoopCredentialEntryClz;
         try {
           hadoopCredentialEntryClz = Class
               .forName(HADOOP_CRED_ENTRY_CLASS_NAME);
@@ -239,17 +246,15 @@ public class TestHBaseConfiguration {
       LOG.info("Credential provider classes have been" +
           " loaded and initialized successfully through reflection.");
       return true;
-
     }
 
     private Method loadMethod(Class<?> clz, String name, Class<?>... classes)
         throws Exception {
-      Method method = null;
+      Method method;
       try {
         method = clz.getMethod(name, classes);
       } catch (SecurityException e) {
-        fail("security exception caught for: " + name + " in " +
-      clz.getCanonicalName());
+        fail("security exception caught for: " + name + " in " + clz.getCanonicalName());
         throw e;
       } catch (NoSuchMethodException e) {
         LOG.error("Failed to load the " + name + ": " + e);
@@ -269,19 +274,11 @@ public class TestHBaseConfiguration {
     @SuppressWarnings("unchecked")
     protected  List<Object> getCredentialProviders(Configuration conf) {
       // Call CredentialProviderFactory.getProviders(Configuration)
-      Object providersObj = null;
+      Object providersObj;
       try {
         providersObj = getProvidersMethod.invoke(hadoopCredProviderFactory,
             conf);
-      } catch (IllegalArgumentException e) {
-        LOG.error("Failed to invoke: " + getProvidersMethod.getName() +
-            ": " + e);
-        return null;
-      } catch (IllegalAccessException e) {
-        LOG.error("Failed to invoke: " + getProvidersMethod.getName() +
-            ": " + e);
-        return null;
-      } catch (InvocationTargetException e) {
+      } catch (IllegalArgumentException | InvocationTargetException | IllegalAccessException e) {
         LOG.error("Failed to invoke: " + getProvidersMethod.getName() +
             ": " + e);
         return null;
@@ -308,7 +305,6 @@ public class TestHBaseConfiguration {
      */
     public  void createEntry(Configuration conf, String name, char[] credential)
         throws Exception {
-
       if (!isHadoopCredentialProviderAvailable()) {
         return;
       }
@@ -338,30 +334,17 @@ public class TestHBaseConfiguration {
      */
     private void createEntryInProvider(Object credentialProvider,
         String name, char[] credential) throws Exception {
-
       if (!isHadoopCredentialProviderAvailable()) {
         return;
       }
 
       try {
         createCredentialEntryMethod.invoke(credentialProvider, name, credential);
-      } catch (IllegalArgumentException e) {
-        return;
-      } catch (IllegalAccessException e) {
-        return;
-      } catch (InvocationTargetException e) {
+      } catch (IllegalArgumentException | InvocationTargetException | IllegalAccessException e) {
         return;
       }
 
-      try {
-        flushMethod.invoke(credentialProvider);
-      } catch (IllegalArgumentException e) {
-        throw e;
-      } catch (IllegalAccessException e) {
-        throw e;
-      } catch (InvocationTargetException e) {
-        throw e;
-      }
+      flushMethod.invoke(credentialProvider);
     }
   }
 }
