@@ -15,24 +15,30 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-
 package org.apache.hadoop.hbase.types;
 
-import org.apache.hadoop.hbase.testclassification.MiscTests;
-import org.apache.hadoop.hbase.testclassification.SmallTests;
-import org.junit.Before;
-import org.junit.Test;
-import org.junit.experimental.categories.Category;
-
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertFalse;
+import static org.junit.Assert.assertNotNull;
+import static org.junit.Assert.assertNull;
+import static org.junit.Assert.assertTrue;
 import java.util.Map;
 import java.util.concurrent.ConcurrentNavigableMap;
 import java.util.concurrent.ConcurrentSkipListMap;
 import java.util.concurrent.ThreadLocalRandom;
+import org.apache.hadoop.hbase.HBaseClassTestRule;
+import org.apache.hadoop.hbase.testclassification.MediumTests;
+import org.apache.hadoop.hbase.testclassification.MiscTests;
+import org.junit.Before;
+import org.junit.ClassRule;
+import org.junit.Test;
+import org.junit.experimental.categories.Category;
 
-import static org.junit.Assert.*;
-
-@Category({MiscTests.class, SmallTests.class})
+@Category({ MiscTests.class, MediumTests.class })
 public class TestCopyOnWriteMaps {
+  @ClassRule
+  public static final HBaseClassTestRule CLASS_RULE =
+      HBaseClassTestRule.forClass(TestCopyOnWriteMaps.class);
 
   private static final int MAX_RAND = 10 * 1000 * 1000;
   private ConcurrentNavigableMap<Long, Long> m;
@@ -43,7 +49,7 @@ public class TestCopyOnWriteMaps {
     m = new CopyOnWriteArrayMap<>();
     csm = new ConcurrentSkipListMap<>();
 
-    for (  long i = 0 ; i < 10000; i++ ) {
+    for (long i = 0 ; i < 10000; i++) {
       long o = ThreadLocalRandom.current().nextLong(MAX_RAND);
       m.put(i, o);
       csm.put(i,o);
@@ -54,12 +60,12 @@ public class TestCopyOnWriteMaps {
   }
 
   @Test
-  public void testSize() throws Exception {
+  public void testSize() {
     assertEquals("Size should always be equal", m.size(), csm.size());
   }
 
   @Test
-  public void testIsEmpty() throws Exception {
+  public void testIsEmpty() {
     m.clear();
     assertTrue(m.isEmpty());
     m.put(100L, 100L);
@@ -69,7 +75,7 @@ public class TestCopyOnWriteMaps {
   }
 
   @Test
-  public void testFindOnEmpty() throws Exception {
+  public void testFindOnEmpty() {
     m.clear();
     assertTrue(m.isEmpty());
     assertNull(m.get(100L));
@@ -77,81 +83,77 @@ public class TestCopyOnWriteMaps {
     assertEquals(0, m.tailMap(100L).entrySet().size());
   }
 
-
   @Test
-  public void testLowerKey() throws Exception {
-
+  public void testLowerKey() {
     assertEquals(csm.lowerKey(400L), m.lowerKey(400L));
     assertEquals(csm.lowerKey(-1L), m.lowerKey(-1L));
 
-    for ( int i =0 ; i < 100; i ++) {
+    for (int i = 0 ; i < 100; i++) {
       Long key = ThreadLocalRandom.current().nextLong();
       assertEquals(csm.lowerKey(key), m.lowerKey(key));
     }
   }
 
   @Test
-  public void testFloorEntry() throws Exception {
-    for ( int i =0 ; i < 100; i ++) {
+  public void testFloorEntry() {
+    for (int i = 0 ; i < 100; i++) {
       Long key = ThreadLocalRandom.current().nextLong();
       assertEquals(csm.floorEntry(key), m.floorEntry(key));
     }
   }
 
   @Test
-  public void testFloorKey() throws Exception {
-    for ( int i =0 ; i < 100; i ++) {
+  public void testFloorKey() {
+    for (int i = 0 ; i < 100; i++) {
       Long key = ThreadLocalRandom.current().nextLong();
       assertEquals(csm.floorKey(key), m.floorKey(key));
     }
   }
 
   @Test
-  public void testCeilingKey() throws Exception {
-
+  public void testCeilingKey() {
     assertEquals(csm.ceilingKey(4000L), m.ceilingKey(4000L));
     assertEquals(csm.ceilingKey(400L), m.ceilingKey(400L));
     assertEquals(csm.ceilingKey(-1L), m.ceilingKey(-1L));
 
-    for ( int i =0 ; i < 100; i ++) {
+    for (int i = 0 ; i < 100; i++) {
       Long key = ThreadLocalRandom.current().nextLong();
       assertEquals(csm.ceilingKey(key), m.ceilingKey(key));
     }
   }
 
   @Test
-  public void testHigherKey() throws Exception {
-
+  public void testHigherKey() {
     assertEquals(csm.higherKey(4000L), m.higherKey(4000L));
     assertEquals(csm.higherKey(400L), m.higherKey(400L));
     assertEquals(csm.higherKey(-1L), m.higherKey(-1L));
 
-    for ( int i =0 ; i < 100; i ++) {
+    for (int i = 0 ; i < 100; i++) {
       Long key = ThreadLocalRandom.current().nextLong();
       assertEquals(csm.higherKey(key), m.higherKey(key));
     }
   }
 
   @Test
-  public void testRemove() throws Exception {
-    for (Map.Entry<Long, Long> e:csm.entrySet()) {
+  public void testRemove() {
+    for (Map.Entry<Long, Long> e : csm.entrySet()) {
       assertEquals(csm.remove(e.getKey()), m.remove(e.getKey()));
-      assertEquals(null, m.remove(e.getKey()));
+      assertNull(m.remove(e.getKey()));
     }
   }
 
   @Test
-  public void testReplace() throws Exception {
-    for (Map.Entry<Long, Long> e:csm.entrySet()) {
+  public void testReplace() {
+    for (Map.Entry<Long, Long> e : csm.entrySet()) {
       Long newValue = ThreadLocalRandom.current().nextLong();
       assertEquals(csm.replace(e.getKey(), newValue), m.replace(e.getKey(), newValue));
     }
-    assertEquals(null, m.replace(MAX_RAND + 100L, ThreadLocalRandom.current().nextLong()));
+    assertNull(m.replace(MAX_RAND + 100L, ThreadLocalRandom.current().nextLong()));
   }
 
   @Test
-  public void testReplace1() throws Exception {
-    for (Map.Entry<Long, Long> e: csm.entrySet()) {
+  public void testReplace1() {
+    for (Map.Entry<Long, Long> e : csm.entrySet()) {
       Long newValue = ThreadLocalRandom.current().nextLong();
       assertEquals(csm.replace(e.getKey(), e.getValue() + 1, newValue),
           m.replace(e.getKey(), e.getValue() + 1, newValue));
@@ -160,21 +162,17 @@ public class TestCopyOnWriteMaps {
       assertEquals(newValue, m.get(e.getKey()));
       assertEquals(csm.get(e.getKey()), m.get(e.getKey()));
     }
-    assertEquals(null, m.replace(MAX_RAND + 100L, ThreadLocalRandom.current().nextLong()));
+    assertNull(m.replace(MAX_RAND + 100L, ThreadLocalRandom.current().nextLong()));
   }
 
   @Test
   public void testMultiAdd() throws InterruptedException {
-
     Thread[] threads = new Thread[10];
-    for ( int i =0 ; i<threads.length; i++) {
-      threads[i] = new Thread(new Runnable() {
-        @Override
-        public void run() {
-          for ( int j = 0; j < 5000; j++) {
-            m.put(ThreadLocalRandom.current().nextLong(),
-                ThreadLocalRandom.current().nextLong());
-          }
+    for (int i = 0 ; i < threads.length; i++) {
+      threads[i] = new Thread(() -> {
+        for (int j = 0; j < 5000; j++) {
+          m.put(ThreadLocalRandom.current().nextLong(),
+              ThreadLocalRandom.current().nextLong());
         }
       });
     }
@@ -189,33 +187,32 @@ public class TestCopyOnWriteMaps {
   }
 
   @Test
-  public void testFirstKey() throws Exception {
+  public void testFirstKey() {
     assertEquals(csm.firstKey(), m.firstKey());
   }
 
   @Test
-  public void testLastKey() throws Exception {
+  public void testLastKey() {
     assertEquals(csm.lastKey(), m.lastKey());
   }
 
   @Test
-  public void testFirstEntry() throws Exception {
+  public void testFirstEntry() {
     assertEquals(csm.firstEntry().getKey(), m.firstEntry().getKey());
     assertEquals(csm.firstEntry().getValue(), m.firstEntry().getValue());
     assertEquals(csm.firstEntry(), m.firstEntry());
   }
 
   @Test
-  public void testLastEntry() throws Exception {
+  public void testLastEntry() {
     assertEquals(csm.lastEntry().getKey(), m.lastEntry().getKey());
     assertEquals(csm.lastEntry().getValue(), m.lastEntry().getValue());
     assertEquals(csm.lastEntry(), m.lastEntry());
   }
 
   @Test
-  public void testKeys() throws Exception {
-    for (Long key:csm.keySet()) {
-      //assertTrue(m.containsKey(key));
+  public void testKeys() {
+    for (Long key : csm.keySet()) {
       assertNotNull(m.get(key));
       assertNotNull(m.remove(key));
       assertNull(m.get(key));
@@ -223,30 +220,30 @@ public class TestCopyOnWriteMaps {
   }
 
   @Test
-  public void testValues() throws Exception {
-    for (Long value:m.values()) {
-      assertTrue(csm.values().contains(value));
+  public void testValues() {
+    for (Long value : m.values()) {
+      assertTrue(csm.containsValue(value));
       assertTrue(m.containsValue(value));
     }
   }
 
   @Test
-  public void testTailMap() throws Exception {
+  public void testTailMap() {
     Map<Long, Long> fromCsm = csm.tailMap(50L);
     Map<Long, Long> fromM = m.tailMap(50L);
     assertEquals(fromCsm, fromM);
-    for (Long value:m.keySet()) {
+    for (Long value : m.keySet()) {
       assertEquals(csm.tailMap(value), m.tailMap(value));
     }
 
-    for (  long i = 0 ; i < 100; i++ ) {
+    for (long i = 0; i < 100; i++) {
       long o = ThreadLocalRandom.current().nextLong(MAX_RAND);
       assertEquals(csm.tailMap(o), m.tailMap(o));
     }
   }
 
   @Test
-  public void testTailMapExclusive() throws Exception {
+  public void testTailMapExclusive() {
     m.clear();
     m.put(100L, 100L);
     m.put(101L, 101L);
@@ -257,15 +254,15 @@ public class TestCopyOnWriteMaps {
 
     long n = 100L;
     CopyOnWriteArrayMap<Long,Long> tm99 = (CopyOnWriteArrayMap<Long, Long>) m.tailMap(99L, false);
-    for (Map.Entry<Long,Long> e:tm99.entrySet()) {
-      assertEquals(new Long(n), e.getKey());
-      assertEquals(new Long(n), e.getValue());
+    for (Map.Entry<Long,Long> e : tm99.entrySet()) {
+      assertEquals(Long.valueOf(n), e.getKey());
+      assertEquals(Long.valueOf(n), e.getValue());
       n++;
     }
   }
 
   @Test
-  public void testTailMapInclusive() throws Exception {
+  public void testTailMapInclusive() {
     m.clear();
     m.put(100L, 100L);
     m.put(101L, 101L);
@@ -276,22 +273,22 @@ public class TestCopyOnWriteMaps {
 
     long n = 102;
     CopyOnWriteArrayMap<Long,Long> tm102 = (CopyOnWriteArrayMap<Long, Long>) m.tailMap(102L, true);
-    for (Map.Entry<Long,Long> e:tm102.entrySet()) {
-      assertEquals(new Long(n), e.getKey());
-      assertEquals(new Long(n), e.getValue());
+    for (Map.Entry<Long,Long> e : tm102.entrySet()) {
+      assertEquals(Long.valueOf(n), e.getKey());
+      assertEquals(Long.valueOf(n), e.getValue());
       n++;
     }
     n = 99;
     CopyOnWriteArrayMap<Long,Long> tm98 = (CopyOnWriteArrayMap<Long, Long>) m.tailMap(98L, true);
-    for (Map.Entry<Long,Long> e:tm98.entrySet()) {
-      assertEquals(new Long(n), e.getKey());
-      assertEquals(new Long(n), e.getValue());
+    for (Map.Entry<Long,Long> e : tm98.entrySet()) {
+      assertEquals(Long.valueOf(n), e.getKey());
+      assertEquals(Long.valueOf(n), e.getValue());
       n++;
     }
   }
 
   @Test
-  public void testPut() throws Exception {
+  public void testPut() {
     m.clear();
     m.put(100L, 100L);
     m.put(101L, 101L);
@@ -301,12 +298,12 @@ public class TestCopyOnWriteMaps {
     m.put(102L, 102L);
     long n = 99;
 
-    for (Map.Entry<Long, Long> e:m.entrySet()) {
-      assertEquals(new Long(n), e.getKey());
-      assertEquals(new Long(n), e.getValue());
+    for (Map.Entry<Long, Long> e : m.entrySet()) {
+      assertEquals(Long.valueOf(n), e.getKey());
+      assertEquals(Long.valueOf(n), e.getValue());
       n++;
     }
     assertEquals(5, m.size());
-    assertEquals(false, m.isEmpty());
+    assertFalse(m.isEmpty());
   }
 }
