@@ -18,6 +18,7 @@
  */
 package org.apache.hadoop.hbase.io.hfile;
 
+
 import java.io.ByteArrayInputStream;
 import java.io.ByteArrayOutputStream;
 import java.io.DataInput;
@@ -25,24 +26,25 @@ import java.io.DataInputStream;
 import java.io.DataOutputStream;
 import java.io.IOException;
 import java.nio.ByteBuffer;
-
 import org.apache.hadoop.fs.FSDataInputStream;
 import org.apache.hadoop.hbase.CellComparator;
-import org.apache.hadoop.hbase.CellComparator.MetaCellComparator;
+import org.apache.hadoop.hbase.CellComparatorImpl;
 import org.apache.hadoop.hbase.KeyValue;
-import org.apache.yetus.audience.InterfaceAudience;
+import org.apache.hadoop.hbase.MetaCellComparator;
 import org.apache.hadoop.hbase.io.compress.Compression;
-import org.apache.hadoop.hbase.shaded.com.google.protobuf.UnsafeByteOperations;
-import org.apache.hadoop.hbase.shaded.protobuf.generated.HFileProtos;
 import org.apache.hadoop.hbase.util.Bytes;
-
+import org.apache.yetus.audience.InterfaceAudience;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+import org.apache.hbase.thirdparty.com.google.protobuf.UnsafeByteOperations;
+import org.apache.hadoop.hbase.shaded.protobuf.generated.HFileProtos;
 
 /**
  * The {@link HFile} has a fixed trailer which contains offsets to other
  * variable parts of the file. Also includes basic metadata on this file. The
  * trailer size is fixed within a given {@link HFile} format version only, but
  * we always store the version number as the last four-byte integer of the file.
- * The version number itself is split into two portions, a major 
+ * The version number itself is split into two portions, a major
  * version and a minor version. The last three bytes of a file are the major
  * version and a single preceding byte is the minor number. The major version
  * determines which readers/writers to use to read/write a hfile while a minor
@@ -51,6 +53,8 @@ import org.apache.hadoop.hbase.util.Bytes;
  */
 @InterfaceAudience.Private
 public class FixedFileTrailer {
+  private static final Logger LOG = LoggerFactory.getLogger(FixedFileTrailer.class);
+
   /**
    * We store the comparator class name as a fixed-length field in the trailer.
    */
@@ -71,16 +75,24 @@ public class FixedFileTrailer {
    */
   private long loadOnOpenDataOffset;
 
-  /** The number of entries in the root data index. */
+  /**
+   * The number of entries in the root data index.
+   */
   private int dataIndexCount;
 
-  /** Total uncompressed size of all blocks of the data index */
+  /**
+   * Total uncompressed size of all blocks of the data index
+   */
   private long uncompressedDataIndexSize;
 
-  /** The number of entries in the meta index */
+  /**
+   * The number of entries in the meta index
+   */
   private int metaIndexCount;
 
-  /** The total uncompressed size of keys/values stored in the file. */
+  /**
+   * The total uncompressed size of keys/values stored in the file.
+   */
   private long totalUncompressedBytes;
 
   /**
@@ -89,7 +101,9 @@ public class FixedFileTrailer {
    */
   private long entryCount;
 
-  /** The compression codec used for all blocks. */
+  /**
+   * The compression codec used for all blocks.
+   */
   private Compression.Algorithm compressionCodec = Compression.Algorithm.NONE;
 
   /**
@@ -98,7 +112,9 @@ public class FixedFileTrailer {
    */
   private int numDataIndexLevels;
 
-  /** The offset of the first data block. */
+  /**
+   * The offset of the first data block.
+   */
   private long firstDataBlockOffset;
 
   /**
@@ -107,17 +123,25 @@ public class FixedFileTrailer {
    */
   private long lastDataBlockOffset;
 
-  /** Raw key comparator class name in version 3 */
+  /**
+   * Raw key comparator class name in version 3
+   */
   // We could write the actual class name from 2.0 onwards and handle BC
-  private String comparatorClassName = CellComparator.COMPARATOR.getClass().getName();
+  private String comparatorClassName = CellComparator.getInstance().getClass().getName();
 
-  /** The encryption key */
+  /**
+   * The encryption key
+   */
   private byte[] encryptionKey;
 
-  /** The {@link HFile} format major version. */
+  /**
+   * The {@link HFile} format major version.
+   */
   private final int majorVersion;
 
-  /** The {@link HFile} format minor version. */
+  /**
+   * The {@link HFile} format minor version.
+   */
   private final int minorVersion;
 
   FixedFileTrailer(int majorVersion, int minorVersion) {
@@ -127,7 +151,7 @@ public class FixedFileTrailer {
   }
 
   private static int[] computeTrailerSizeByVersion() {
-    int versionToSize[] = new int[HFile.MAX_FORMAT_VERSION + 1];
+    int[] versionToSize = new int[HFile.MAX_FORMAT_VERSION + 1];
     // We support only 2 major versions now. ie. V2, V3
     versionToSize[2] = 212;
     for (int version = 3; version <= HFile.MAX_FORMAT_VERSION; version++) {
@@ -141,14 +165,13 @@ public class FixedFileTrailer {
 
   private static int getMaxTrailerSize() {
     int maxSize = 0;
-    for (int version = HFile.MIN_FORMAT_VERSION;
-         version <= HFile.MAX_FORMAT_VERSION;
-         ++version)
+    for (int version = HFile.MIN_FORMAT_VERSION; version <= HFile.MAX_FORMAT_VERSION; ++version) {
       maxSize = Math.max(getTrailerSize(version), maxSize);
+    }
     return maxSize;
   }
 
-  private static final int TRAILER_SIZE[] = computeTrailerSizeByVersion();
+  private static final int[] TRAILER_SIZE = computeTrailerSizeByVersion();
   private static final int MAX_TRAILER_SIZE = getMaxTrailerSize();
 
   private static final int NOT_PB_SIZE = BlockType.MAGIC_LENGTH + Bytes.SIZEOF_INT;
@@ -165,9 +188,6 @@ public class FixedFileTrailer {
    * Write the trailer to a data stream. We support writing version 1 for
    * testing and for determining version 1 trailer size. It is also easy to see
    * what fields changed in version 2.
-   *
-   * @param outputStream
-   * @throws IOException
    */
   void serialize(DataOutputStream outputStream) throws IOException {
     HFile.checkFormatVersion(majorVersion);
@@ -184,13 +204,7 @@ public class FixedFileTrailer {
     baos.writeTo(outputStream);
   }
 
-  /**
-   * Write trailer data as protobuf
-   * @param outputStream
-   * @throws IOException
-   */
-  void serializeAsPB(DataOutputStream output) throws IOException {
-    ByteArrayOutputStream baos = new ByteArrayOutputStream();
+  HFileProtos.FileTrailerProto toProtobuf() {
     HFileProtos.FileTrailerProto.Builder builder = HFileProtos.FileTrailerProto.newBuilder()
       .setFileInfoOffset(fileInfoOffset)
       .setLoadOnOpenDataOffset(loadOnOpenDataOffset)
@@ -202,16 +216,24 @@ public class FixedFileTrailer {
       .setNumDataIndexLevels(numDataIndexLevels)
       .setFirstDataBlockOffset(firstDataBlockOffset)
       .setLastDataBlockOffset(lastDataBlockOffset)
-      // TODO this is a classname encoded into an  HFile's trailer. We are going to need to have
-      // some compat code here.
-      .setComparatorClassName(comparatorClassName)
+      .setComparatorClassName(getHBase1CompatibleName(comparatorClassName))
       .setCompressionCodec(compressionCodec.ordinal());
     if (encryptionKey != null) {
       builder.setEncryptionKey(UnsafeByteOperations.unsafeWrap(encryptionKey));
     }
+    return builder.build();
+  }
+
+  /**
+   * Write trailer data as protobuf.
+   * NOTE: we run a translation on the comparator name and will serialize the old hbase-1.x where
+   * it makes sense. See {@link #getHBase1CompatibleName(String)}.
+   */
+  void serializeAsPB(DataOutputStream output) throws IOException {
+    ByteArrayOutputStream baos = new ByteArrayOutputStream();
     // We need this extra copy unfortunately to determine the final size of the
     // delimited output, see use of baos.size() below.
-    builder.build().writeDelimitedTo(baos);
+    toProtobuf().writeDelimitedTo(baos);
     baos.writeTo(output);
     // Pad to make up the difference between variable PB encoding length and the
     // length when encoded as writable under earlier V2 formats. Failure to pad
@@ -230,9 +252,6 @@ public class FixedFileTrailer {
    * Deserialize the fixed file trailer from the given stream. The version needs
    * to already be specified. Make sure this is consistent with
    * {@link #serialize(DataOutputStream)}.
-   *
-   * @param inputStream
-   * @throws IOException
    */
   void deserialize(DataInputStream inputStream) throws IOException {
     HFile.checkFormatVersion(majorVersion);
@@ -240,7 +259,7 @@ public class FixedFileTrailer {
     BlockType.TRAILER.readAndCheck(inputStream);
 
     if (majorVersion > 2
-        || (majorVersion == 2 && minorVersion >= HFileReaderImpl.PBUF_TRAILER_MINOR_VERSION)) {
+      || (majorVersion == 2 && minorVersion >= HFileReaderImpl.PBUF_TRAILER_MINOR_VERSION)) {
       deserializeFromPB(inputStream);
     } else {
       deserializeFromWritable(inputStream);
@@ -254,14 +273,12 @@ public class FixedFileTrailer {
 
   /**
    * Deserialize the file trailer as protobuf
-   * @param inputStream
-   * @throws IOException
    */
   void deserializeFromPB(DataInputStream inputStream) throws IOException {
     // read PB and skip padding
     int start = inputStream.available();
     HFileProtos.FileTrailerProto trailerProto =
-        HFileProtos.FileTrailerProto.PARSER.parseDelimitedFrom(inputStream);
+      HFileProtos.FileTrailerProto.PARSER.parseDelimitedFrom(inputStream);
     int size = start - inputStream.available();
     inputStream.skip(getTrailerSize() - NOT_PB_SIZE - size);
 
@@ -297,8 +314,6 @@ public class FixedFileTrailer {
       lastDataBlockOffset = trailerProto.getLastDataBlockOffset();
     }
     if (trailerProto.hasComparatorClassName()) {
-      // TODO this is a classname encoded into an  HFile's trailer. We are going to need to have 
-      // some compat code here.
       setComparatorClass(getComparatorClass(trailerProto.getComparatorClassName()));
     }
     if (trailerProto.hasCompressionCodec()) {
@@ -313,8 +328,6 @@ public class FixedFileTrailer {
 
   /**
    * Deserialize the file trailer as writable data
-   * @param input
-   * @throws IOException
    */
   void deserializeFromWritable(DataInput input) throws IOException {
     fileInfoOffset = input.readLong();
@@ -332,12 +345,13 @@ public class FixedFileTrailer {
     // TODO this is a classname encoded into an  HFile's trailer. We are going to need to have 
     // some compat code here.
     setComparatorClass(getComparatorClass(Bytes.readStringFixedSize(input,
-        MAX_COMPARATOR_NAME_LENGTH)));
+      MAX_COMPARATOR_NAME_LENGTH)));
   }
-  
+
   private void append(StringBuilder sb, String s) {
-    if (sb.length() > 0)
+    if (sb.length() > 0) {
       sb.append(", ");
+    }
     sb.append(s);
   }
 
@@ -368,18 +382,18 @@ public class FixedFileTrailer {
   /**
    * Reads a file trailer from the given file.
    *
-   * @param istream the input stream with the ability to seek. Does not have to
-   *          be buffered, as only one read operation is made.
+   * @param istream  the input stream with the ability to seek. Does not have to
+   *                 be buffered, as only one read operation is made.
    * @param fileSize the file size. Can be obtained using
-   *          {@link org.apache.hadoop.fs.FileSystem#getFileStatus(
-   *          org.apache.hadoop.fs.Path)}.
+   *                 {@link org.apache.hadoop.fs.FileSystem#getFileStatus(
+   *org.apache.hadoop.fs.Path)}.
    * @return the fixed file trailer read
    * @throws IOException if failed to read from the underlying stream, or the
-   *           trailer is corrupted, or the version of the trailer is
-   *           unsupported
+   *                     trailer is corrupted, or the version of the trailer is
+   *                     unsupported
    */
   public static FixedFileTrailer readFromStream(FSDataInputStream istream,
-      long fileSize) throws IOException {
+                                                long fileSize) throws IOException {
     int bufferSize = MAX_TRAILER_SIZE;
     long seekPoint = fileSize - bufferSize;
     if (seekPoint < 0) {
@@ -392,7 +406,7 @@ public class FixedFileTrailer {
 
     ByteBuffer buf = ByteBuffer.allocate(bufferSize);
     istream.readFully(buf.array(), buf.arrayOffset(),
-        buf.arrayOffset() + buf.limit());
+      buf.arrayOffset() + buf.limit());
 
     // Read the version from the last int of the file.
     buf.position(buf.limit() - Bytes.SIZEOF_INT);
@@ -408,30 +422,30 @@ public class FixedFileTrailer {
 
     FixedFileTrailer fft = new FixedFileTrailer(majorVersion, minorVersion);
     fft.deserialize(new DataInputStream(new ByteArrayInputStream(buf.array(),
-        buf.arrayOffset() + bufferSize - trailerSize, trailerSize)));
+      buf.arrayOffset() + bufferSize - trailerSize, trailerSize)));
     return fft;
   }
 
   public void expectMajorVersion(int expected) {
     if (majorVersion != expected) {
       throw new IllegalArgumentException("Invalid HFile major version: "
-          + majorVersion 
-          + " (expected: " + expected + ")");
+        + majorVersion
+        + " (expected: " + expected + ")");
     }
   }
 
   public void expectMinorVersion(int expected) {
     if (minorVersion != expected) {
       throw new IllegalArgumentException("Invalid HFile minor version: "
-          + minorVersion + " (expected: " + expected + ")");
+        + minorVersion + " (expected: " + expected + ")");
     }
   }
 
   public void expectAtLeastMajorVersion(int lowerBound) {
     if (majorVersion < lowerBound) {
       throw new IllegalArgumentException("Invalid HFile major version: "
-          + majorVersion
-          + " (expected: " + lowerBound + " or higher).");
+        + majorVersion
+        + " (expected: " + lowerBound + " or higher).");
     }
   }
 
@@ -544,29 +558,66 @@ public class FixedFileTrailer {
     try {
       // If null, it should be the Bytes.BYTES_RAWCOMPARATOR
       if (klass != null) {
-        CellComparator comp = klass.newInstance();
+        CellComparator comp = klass.getDeclaredConstructor().newInstance();
         // if the name wasn't one of the legacy names, maybe its a legit new
         // kind of comparator.
-        comparatorClassName = klass.getName();
+        this.comparatorClassName = klass.getName();
       }
-
     } catch (Exception e) {
       throw new RuntimeException("Comparator class " + klass.getName() + " is not instantiable", e);
     }
   }
 
+  /**
+   * If a 'standard' Comparator, write the old name for the Comparator when we serialize rather
+   * than the new name; writing the new name will make it so newly-written hfiles are not parseable
+   * by hbase-1.x, a facility we'd like to preserve across rolling upgrade and hbase-1.x clusters
+   * reading hbase-2.x produce.
+   * <p>
+   * The Comparators in hbase-2.x work the same as they did in hbase-1.x; they compare
+   * KeyValues. In hbase-2.x they were renamed making use of the more generic 'Cell'
+   * nomenclature to indicate that we intend to move away from KeyValues post hbase-2. A naming
+   * change is not reason enough to make it so hbase-1.x cannot read hbase-2.x files given the
+   * structure goes unchanged (hfile v3). So, lets write the old names for Comparators into the
+   * hfile tails in hbase-2. Here is where we do the translation.
+   * {@link #getComparatorClass(String)} does translation going the other way.
+   *
+   * <p>The translation is done on the serialized Protobuf only.</p>
+   *
+   * @param comparator String class name of the Comparator used in this hfile.
+   * @return What to store in the trailer as our comparator name.
+   * @see #getComparatorClass(String)
+   * @since hbase-2.0.0.
+   * @deprecated Since hbase-2.0.0. Will be removed in hbase-3.0.0.
+   */
+  @Deprecated
+  private String getHBase1CompatibleName(final String comparator) {
+    if (comparator.equals(CellComparatorImpl.class.getName())) {
+      return KeyValue.COMPARATOR.getClass().getName();
+    }
+    if (comparator.equals(MetaCellComparator.class.getName())) {
+      return KeyValue.META_COMPARATOR.getClass().getName();
+    }
+    return comparator;
+  }
+
   @SuppressWarnings("unchecked")
   private static Class<? extends CellComparator> getComparatorClass(String comparatorClassName)
-      throws IOException {
+    throws IOException {
     Class<? extends CellComparator> comparatorKlass;
+    // for BC
     if (comparatorClassName.equals(KeyValue.COMPARATOR.getLegacyKeyComparatorName())
-        || comparatorClassName.equals(KeyValue.COMPARATOR.getClass().getName())) {
-      comparatorKlass = CellComparator.class;
+      || comparatorClassName.equals(KeyValue.COMPARATOR.getClass().getName())
+      || (comparatorClassName.equals("org.apache.hadoop.hbase.CellComparator"))) {
+      comparatorKlass = CellComparatorImpl.class;
     } else if (comparatorClassName.equals(KeyValue.META_COMPARATOR.getLegacyKeyComparatorName())
-        || comparatorClassName.equals(KeyValue.META_COMPARATOR.getClass().getName())) {
+      || comparatorClassName.equals(KeyValue.META_COMPARATOR.getClass().getName())
+      || (comparatorClassName.equals("org.apache.hadoop.hbase.CellComparator$MetaCellComparator"))      
+      || (comparatorClassName.equals("org.apache.hadoop.hbase.CellComparatorImpl$MetaCellComparator"))      
+      || (comparatorClassName.equals("org.apache.hadoop.hbase.MetaCellComparator"))) {
       comparatorKlass = MetaCellComparator.class;
-    } else if (comparatorClassName.equals("org.apache.hadoop.hbase.KeyValue.RawBytesComparator")
-        || comparatorClassName.equals("org.apache.hadoop.hbase.util.Bytes$ByteArrayComparator")) {
+    } else if (comparatorClassName.equals("org.apache.hadoop.hbase.KeyValue$RawBytesComparator")
+      || comparatorClassName.equals("org.apache.hadoop.hbase.util.Bytes$ByteArrayComparator")) {
       // When the comparator to be used is Bytes.BYTES_RAWCOMPARATOR, we just return null from here
       // Bytes.BYTES_RAWCOMPARATOR is not a CellComparator
       comparatorKlass = null;
@@ -581,17 +632,22 @@ public class FixedFileTrailer {
     return comparatorKlass;
   }
 
-  public static CellComparator createComparator(
-      String comparatorClassName) throws IOException {
+  static CellComparator createComparator(String comparatorClassName) throws IOException {
+    if (comparatorClassName.equals(CellComparatorImpl.COMPARATOR.getClass().getName())) {
+      return CellComparatorImpl.COMPARATOR;
+    } else if (comparatorClassName.equals(
+      MetaCellComparator.META_COMPARATOR.getClass().getName())) {
+      return MetaCellComparator.META_COMPARATOR;
+    }
     try {
       Class<? extends CellComparator> comparatorClass = getComparatorClass(comparatorClassName);
-      return comparatorClass != null ? comparatorClass.newInstance() : null;
-    } catch (InstantiationException e) {
-      throw new IOException("Comparator class " + comparatorClassName +
-        " is not instantiable", e);
-    } catch (IllegalAccessException e) {
-      throw new IOException("Comparator class " + comparatorClassName +
-        " is not instantiable", e);
+      if (comparatorClass != null) {
+        return comparatorClass.getDeclaredConstructor().newInstance();
+      }
+      LOG.warn("No Comparator class for " + comparatorClassName + ". Returning Null.");
+      return null;
+    } catch (Exception e) {
+      throw new IOException("Comparator class " + comparatorClassName + " is not instantiable", e);
     }
   }
 
@@ -605,7 +661,7 @@ public class FixedFileTrailer {
   }
 
   public void setUncompressedDataIndexSize(
-      long uncompressedDataIndexSize) {
+    long uncompressedDataIndexSize) {
     expectAtLeastMajorVersion(2);
     this.uncompressedDataIndexSize = uncompressedDataIndexSize;
   }
