@@ -1,5 +1,4 @@
 /**
- *
  * Licensed to the Apache Software Foundation (ASF) under one
  * or more contributor license agreements.  See the NOTICE file
  * distributed with this work for additional information
@@ -19,34 +18,33 @@
 
 package org.apache.hadoop.hbase.regionserver;
 
+import com.google.protobuf.Message;
+import com.google.protobuf.Service;
+
 import java.io.IOException;
+import java.lang.reflect.InvocationTargetException;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
-import java.util.NavigableSet;
 import java.util.UUID;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ConcurrentMap;
-import java.util.regex.Matcher;
-
-import com.google.protobuf.Message;
-import com.google.protobuf.Service;
-import org.apache.commons.collections4.map.AbstractReferenceMap;
-import org.apache.commons.collections4.map.ReferenceMap;
-import org.apache.commons.logging.Log;
-import org.apache.commons.logging.LogFactory;
+import java.util.stream.Collectors;
 import org.apache.hadoop.conf.Configuration;
 import org.apache.hadoop.fs.FileSystem;
 import org.apache.hadoop.fs.Path;
 import org.apache.hadoop.hbase.Cell;
-import org.apache.hadoop.hbase.CompareOperator;
-import org.apache.hadoop.hbase.Coprocessor;
 import org.apache.hadoop.hbase.HBaseConfiguration;
-import org.apache.hadoop.hbase.HBaseInterfaceAudience;
 import org.apache.hadoop.hbase.HConstants;
+import org.apache.hadoop.hbase.RawCellBuilder;
+import org.apache.hadoop.hbase.RawCellBuilderFactory;
+import org.apache.hadoop.hbase.ServerName;
+import org.apache.hadoop.hbase.SharedConnection;
 import org.apache.hadoop.hbase.client.Append;
+import org.apache.hadoop.hbase.client.CheckAndMutate;
+import org.apache.hadoop.hbase.client.CheckAndMutateResult;
+import org.apache.hadoop.hbase.client.Connection;
 import org.apache.hadoop.hbase.client.Delete;
-import org.apache.hadoop.hbase.client.Durability;
 import org.apache.hadoop.hbase.client.Get;
 import org.apache.hadoop.hbase.client.Increment;
 import org.apache.hadoop.hbase.client.Mutation;
@@ -57,17 +55,18 @@ import org.apache.hadoop.hbase.client.Scan;
 import org.apache.hadoop.hbase.client.TableDescriptor;
 import org.apache.hadoop.hbase.coprocessor.BaseEnvironment;
 import org.apache.hadoop.hbase.coprocessor.BulkLoadObserver;
+import org.apache.hadoop.hbase.coprocessor.CoprocessorException;
 import org.apache.hadoop.hbase.coprocessor.CoprocessorHost;
 import org.apache.hadoop.hbase.coprocessor.CoprocessorService;
 import org.apache.hadoop.hbase.coprocessor.CoprocessorServiceBackwardCompatiblity;
+import org.apache.hadoop.hbase.coprocessor.CoreCoprocessor;
 import org.apache.hadoop.hbase.coprocessor.EndpointObserver;
+import org.apache.hadoop.hbase.coprocessor.HasRegionServerServices;
 import org.apache.hadoop.hbase.coprocessor.MetricsCoprocessor;
 import org.apache.hadoop.hbase.coprocessor.ObserverContext;
 import org.apache.hadoop.hbase.coprocessor.RegionCoprocessor;
 import org.apache.hadoop.hbase.coprocessor.RegionCoprocessorEnvironment;
 import org.apache.hadoop.hbase.coprocessor.RegionObserver;
-import org.apache.hadoop.hbase.coprocessor.RegionObserver.MutationType;
-import org.apache.hadoop.hbase.filter.ByteArrayComparable;
 import org.apache.hadoop.hbase.io.FSDataInputStreamWrapper;
 import org.apache.hadoop.hbase.io.Reference;
 import org.apache.hadoop.hbase.io.hfile.CacheConfig;
@@ -77,26 +76,26 @@ import org.apache.hadoop.hbase.regionserver.compactions.CompactionLifeCycleTrack
 import org.apache.hadoop.hbase.regionserver.compactions.CompactionRequest;
 import org.apache.hadoop.hbase.regionserver.querymatcher.DeleteTracker;
 import org.apache.hadoop.hbase.security.User;
-import org.apache.hadoop.hbase.shaded.com.google.common.collect.ImmutableList;
-import org.apache.hadoop.hbase.shaded.com.google.common.collect.Lists;
-import org.apache.hadoop.hbase.util.Bytes;
 import org.apache.hadoop.hbase.util.CoprocessorClassLoader;
 import org.apache.hadoop.hbase.util.Pair;
 import org.apache.hadoop.hbase.wal.WALEdit;
 import org.apache.hadoop.hbase.wal.WALKey;
 import org.apache.yetus.audience.InterfaceAudience;
-import org.apache.yetus.audience.InterfaceStability;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+
+import org.apache.hbase.thirdparty.org.apache.commons.collections4.map.AbstractReferenceMap;
+import org.apache.hbase.thirdparty.org.apache.commons.collections4.map.ReferenceMap;
 
 /**
  * Implements the coprocessor environment and runtime support for coprocessors
  * loaded within a {@link Region}.
  */
-@InterfaceAudience.LimitedPrivate(HBaseInterfaceAudience.COPROC)
-@InterfaceStability.Evolving
+@InterfaceAudience.Private
 public class RegionCoprocessorHost
     extends CoprocessorHost<RegionCoprocessor, RegionCoprocessorEnvironment> {
 
-  private static final Log LOG = LogFactory.getLog(RegionCoprocessorHost.class);
+  private static final Logger LOG = LoggerFactory.getLogger(RegionCoprocessorHost.class);
   // The shared data map
   private static final ReferenceMap<String, ConcurrentMap<String, Object>> SHARED_DATA_MAP =
       new ReferenceMap<>(AbstractReferenceMap.ReferenceStrength.HARD,
@@ -105,17 +104,23 @@ public class RegionCoprocessorHost
   // optimization: no need to call postScannerFilterRow, if no coprocessor implements it
   private final boolean hasCustomPostScannerFilterRow;
 
+  /*
+   * Whether any configured CPs override postScannerFilterRow hook
+   */
+  public boolean hasCustomPostScannerFilterRow() {
+    return hasCustomPostScannerFilterRow;
+  }
+
   /**
    *
    * Encapsulation of the environment of each coprocessor
    */
-  static class RegionEnvironment extends BaseEnvironment<RegionCoprocessor>
+  private static class RegionEnvironment extends BaseEnvironment<RegionCoprocessor>
       implements RegionCoprocessorEnvironment {
-
     private Region region;
-    private RegionServerServices rsServices;
     ConcurrentMap<String, Object> sharedData;
     private final MetricRegistry metricRegistry;
+    private final RegionServerServices services;
 
     /**
      * Constructor
@@ -127,8 +132,8 @@ public class RegionCoprocessorHost
         final RegionServerServices services, final ConcurrentMap<String, Object> sharedData) {
       super(impl, priority, seq, conf);
       this.region = region;
-      this.rsServices = services;
       this.sharedData = sharedData;
+      this.services = services;
       this.metricRegistry =
           MetricsCoprocessor.createRegistryForRegionCoprocessor(impl.getClass().getName());
     }
@@ -139,10 +144,25 @@ public class RegionCoprocessorHost
       return region;
     }
 
-    /** @return reference to the region server services */
     @Override
-    public CoprocessorRegionServerServices getCoprocessorRegionServerServices() {
-      return rsServices;
+    public OnlineRegions getOnlineRegions() {
+      return this.services;
+    }
+
+    @Override
+    public Connection getConnection() {
+      // Mocks may have services as null at test time.
+      return services != null ? new SharedConnection(services.getConnection()) : null;
+    }
+
+    @Override
+    public Connection createConnection(Configuration conf) throws IOException {
+      return services != null ? this.services.createConnection(conf) : null;
+    }
+
+    @Override
+    public ServerName getServerName() {
+      return services != null? services.getServerName(): null;
     }
 
     @Override
@@ -164,6 +184,37 @@ public class RegionCoprocessorHost
     @Override
     public MetricRegistry getMetricRegistryForRegionServer() {
       return metricRegistry;
+    }
+
+    @Override
+    public RawCellBuilder getCellBuilder() {
+      // We always do a DEEP_COPY only
+      return RawCellBuilderFactory.create();
+    }
+  }
+
+  /**
+   * Special version of RegionEnvironment that exposes RegionServerServices for Core
+   * Coprocessors only. Temporary hack until Core Coprocessors are integrated into Core.
+   */
+  private static class RegionEnvironmentForCoreCoprocessors extends
+      RegionEnvironment implements HasRegionServerServices {
+    private final RegionServerServices rsServices;
+
+    public RegionEnvironmentForCoreCoprocessors(final RegionCoprocessor impl, final int priority,
+      final int seq, final Configuration conf, final Region region,
+      final RegionServerServices services, final ConcurrentMap<String, Object> sharedData) {
+      super(impl, priority, seq, conf, region, services, sharedData);
+      this.rsServices = services;
+    }
+
+    /**
+     * @return An instance of RegionServerServices, an object NOT for general user-space Coprocessor
+     * consumption.
+     */
+    @Override
+    public RegionServerServices getRegionServerServices() {
+      return this.rsServices;
     }
   }
 
@@ -201,7 +252,7 @@ public class RegionCoprocessorHost
   /** The region server services */
   RegionServerServices rsServices;
   /** The region */
-  Region region;
+  HRegion region;
 
   /**
    * Constructor
@@ -209,7 +260,7 @@ public class RegionCoprocessorHost
    * @param rsServices interface to available region server functionality
    * @param conf the configuration
    */
-  public RegionCoprocessorHost(final Region region,
+  public RegionCoprocessorHost(final HRegion region,
       final RegionServerServices rsServices, final Configuration conf) {
     super(rsServices);
     this.conf = conf;
@@ -233,11 +284,10 @@ public class RegionCoprocessorHost
     out: for (RegionCoprocessorEnvironment env: coprocEnvironments) {
       if (env.getInstance() instanceof RegionObserver) {
         Class<?> clazz = env.getInstance().getClass();
-        for(;;) {
-          if (clazz == null) {
-            // we must have directly implemented RegionObserver
-            hasCustomPostScannerFilterRow = true;
-            break out;
+        for (;;) {
+          if (clazz == Object.class) {
+            // we dont need to look postScannerFilterRow into Object class
+            break; // break the inner loop
           }
           try {
             clazz.getDeclaredMethod("postScannerFilterRow", ObserverContext.class,
@@ -265,59 +315,19 @@ public class RegionCoprocessorHost
 
   static List<TableCoprocessorAttribute> getTableCoprocessorAttrsFromSchema(Configuration conf,
       TableDescriptor htd) {
-    List<TableCoprocessorAttribute> result = Lists.newArrayList();
-    for (Map.Entry<Bytes, Bytes> e: htd.getValues().entrySet()) {
-      String key = Bytes.toString(e.getKey().get()).trim();
-      if (HConstants.CP_HTD_ATTR_KEY_PATTERN.matcher(key).matches()) {
-        String spec = Bytes.toString(e.getValue().get()).trim();
-        // found one
-        try {
-          Matcher matcher = HConstants.CP_HTD_ATTR_VALUE_PATTERN.matcher(spec);
-          if (matcher.matches()) {
-            // jar file path can be empty if the cp class can be loaded
-            // from class loader.
-            Path path = matcher.group(1).trim().isEmpty() ?
-                null : new Path(matcher.group(1).trim());
-            String className = matcher.group(2).trim();
-            if (className.isEmpty()) {
-              LOG.error("Malformed table coprocessor specification: key=" +
-                key + ", spec: " + spec);
-              continue;
-            }
-            String priorityStr = matcher.group(3).trim();
-            int priority = priorityStr.isEmpty() ?
-                Coprocessor.PRIORITY_USER : Integer.parseInt(priorityStr);
-            String cfgSpec = null;
-            try {
-              cfgSpec = matcher.group(4);
-            } catch (IndexOutOfBoundsException ex) {
-              // ignore
-            }
-            Configuration ourConf;
-            if (cfgSpec != null && !cfgSpec.trim().equals("|")) {
-              cfgSpec = cfgSpec.substring(cfgSpec.indexOf('|') + 1);
-              // do an explicit deep copy of the passed configuration
-              ourConf = new Configuration(false);
-              HBaseConfiguration.merge(ourConf, conf);
-              Matcher m = HConstants.CP_HTD_ATTR_VALUE_PARAM_PATTERN.matcher(cfgSpec);
-              while (m.find()) {
-                ourConf.set(m.group(1), m.group(2));
-              }
-            } else {
-              ourConf = conf;
-            }
-            result.add(new TableCoprocessorAttribute(path, className, priority, ourConf));
-          } else {
-            LOG.error("Malformed table coprocessor specification: key=" + key +
-              ", spec: " + spec);
-          }
-        } catch (Exception ioe) {
-          LOG.error("Malformed table coprocessor specification: key=" + key +
-            ", spec: " + spec);
-        }
+    return htd.getCoprocessorDescriptors().stream().map(cp -> {
+      Path path = cp.getJarPath().map(p -> new Path(p)).orElse(null);
+      Configuration ourConf;
+      if (!cp.getProperties().isEmpty()) {
+        // do an explicit deep copy of the passed configuration
+        ourConf = new Configuration(false);
+        HBaseConfiguration.merge(ourConf, conf);
+        cp.getProperties().forEach((k, v) -> ourConf.set(k, v));
+      } else {
+        ourConf = conf;
       }
-    }
-    return result;
+      return new TableCoprocessorAttribute(path, cp.getClassName(), cp.getPriority(), ourConf);
+    }).collect(Collectors.toList());
   }
 
   /**
@@ -345,7 +355,16 @@ public class RegionCoprocessorHost
           cl = CoprocessorHost.class.getClassLoader();
         }
         Thread.currentThread().setContextClassLoader(cl);
-        cl.loadClass(attr.getClassName());
+        if (cl instanceof CoprocessorClassLoader) {
+          String[] includedClassPrefixes = null;
+          if (conf.get(HConstants.CP_HTD_ATTR_INCLUSION_KEY) != null) {
+            String prefixes = attr.conf.get(HConstants.CP_HTD_ATTR_INCLUSION_KEY);
+            includedClassPrefixes = prefixes.split(";");
+          }
+          ((CoprocessorClassLoader)cl).loadClass(attr.getClassName(), includedClassPrefixes);
+        } else {
+          cl.loadClass(attr.getClassName());
+        }
       } catch (ClassNotFoundException e) {
         throw new IOException("Class " + attr.getClassName() + " cannot be loaded", e);
       } finally {
@@ -407,24 +426,32 @@ public class RegionCoprocessorHost
           SHARED_DATA_MAP.computeIfAbsent(instance.getClass().getName(),
               k -> new ConcurrentHashMap<>());
     }
-    return new RegionEnvironment(instance, priority, seq, conf, region,
-        rsServices, classData);
+    // If a CoreCoprocessor, return a 'richer' environment, one laden with RegionServerServices.
+    return instance.getClass().isAnnotationPresent(CoreCoprocessor.class)?
+        new RegionEnvironmentForCoreCoprocessors(instance, priority, seq, conf, region,
+            rsServices, classData):
+        new RegionEnvironment(instance, priority, seq, conf, region, rsServices, classData);
   }
 
   @Override
   public RegionCoprocessor checkAndGetInstance(Class<?> implClass)
       throws InstantiationException, IllegalAccessException {
-    if (RegionCoprocessor.class.isAssignableFrom(implClass)) {
-      return (RegionCoprocessor)implClass.newInstance();
-    } else if (CoprocessorService.class.isAssignableFrom(implClass)) {
-      // For backward compatibility with old CoprocessorService impl which don't extend
-      // RegionCoprocessor.
-      return new CoprocessorServiceBackwardCompatiblity.RegionCoprocessorService(
-          (CoprocessorService)implClass.newInstance());
-    } else {
-      LOG.error(implClass.getName() + " is not of type RegionCoprocessor. Check the "
-          + "configuration " + CoprocessorHost.REGION_COPROCESSOR_CONF_KEY);
-      return null;
+    try {
+      if (RegionCoprocessor.class.isAssignableFrom(implClass)) {
+        return implClass.asSubclass(RegionCoprocessor.class).getDeclaredConstructor().newInstance();
+      } else if (CoprocessorService.class.isAssignableFrom(implClass)) {
+        // For backward compatibility with old CoprocessorService impl which don't extend
+        // RegionCoprocessor.
+        CoprocessorService cs;
+        cs = implClass.asSubclass(CoprocessorService.class).getDeclaredConstructor().newInstance();
+        return new CoprocessorServiceBackwardCompatiblity.RegionCoprocessorService(cs);
+      } else {
+        LOG.error("{} is not of type RegionCoprocessor. Check the configuration of {}",
+            implClass.getName(), CoprocessorHost.REGION_COPROCESSOR_CONF_KEY);
+        return null;
+      }
+    } catch (NoSuchMethodException | InvocationTargetException e) {
+      throw (InstantiationException) new InstantiationException(implClass.getName()).initCause(e);
     }
   }
 
@@ -434,13 +461,22 @@ public class RegionCoprocessorHost
   private ObserverGetter<RegionCoprocessor, EndpointObserver> endpointObserverGetter =
       RegionCoprocessor::getEndpointObserver;
 
-  abstract class RegionObserverOperation extends ObserverOperationWithoutResult<RegionObserver> {
-    public RegionObserverOperation() {
+  abstract class RegionObserverOperationWithoutResult extends
+      ObserverOperationWithoutResult<RegionObserver> {
+    public RegionObserverOperationWithoutResult() {
       super(regionObserverGetter);
     }
 
-    public RegionObserverOperation(User user) {
+    public RegionObserverOperationWithoutResult(User user) {
       super(regionObserverGetter, user);
+    }
+
+    public RegionObserverOperationWithoutResult(boolean bypassable) {
+      super(regionObserverGetter, null, bypassable);
+    }
+
+    public RegionObserverOperationWithoutResult(User user, boolean bypassable) {
+      super(regionObserverGetter, user, bypassable);
     }
   }
 
@@ -466,7 +502,10 @@ public class RegionCoprocessorHost
    * @throws IOException Signals that an I/O exception has occurred.
    */
   public void preOpen() throws IOException {
-    execOperation(coprocEnvironments.isEmpty() ? null : new RegionObserverOperation() {
+    if (coprocEnvironments.isEmpty()) {
+      return;
+    }
+    execOperation(new RegionObserverOperationWithoutResult() {
       @Override
       public void call(RegionObserver observer) throws IOException {
         observer.preOpen(this);
@@ -479,31 +518,18 @@ public class RegionCoprocessorHost
    * Invoked after a region open
    */
   public void postOpen() {
+    if (coprocEnvironments.isEmpty()) {
+      return;
+    }
     try {
-      execOperation(coprocEnvironments.isEmpty() ? null : new RegionObserverOperation() {
+      execOperation(new RegionObserverOperationWithoutResult() {
         @Override
         public void call(RegionObserver observer) throws IOException {
           observer.postOpen(this);
         }
       });
     } catch (IOException e) {
-      LOG.warn(e);
-    }
-  }
-
-  /**
-   * Invoked after log replay on region
-   */
-  public void postLogReplay() {
-    try {
-      execOperation(coprocEnvironments.isEmpty() ? null : new RegionObserverOperation() {
-        @Override
-        public void call(RegionObserver observer) throws IOException {
-          observer.postLogReplay(this);
-        }
-      });
-    } catch (IOException e) {
-      LOG.warn(e);
+      LOG.warn(e.toString(), e);
     }
   }
 
@@ -512,7 +538,7 @@ public class RegionCoprocessorHost
    * @param abortRequested true if the server is aborting
    */
   public void preClose(final boolean abortRequested) throws IOException {
-    execOperation(false, new RegionObserverOperation() {
+    execOperation(new RegionObserverOperationWithoutResult() {
       @Override
       public void call(RegionObserver observer) throws IOException {
         observer.preClose(this, abortRequested);
@@ -526,7 +552,7 @@ public class RegionCoprocessorHost
    */
   public void postClose(final boolean abortRequested) {
     try {
-      execOperation(false, new RegionObserverOperation() {
+      execOperation(new RegionObserverOperationWithoutResult() {
         @Override
         public void call(RegionObserver observer) throws IOException {
           observer.postClose(this, abortRequested);
@@ -538,49 +564,31 @@ public class RegionCoprocessorHost
         }
       });
     } catch (IOException e) {
-      LOG.warn(e);
+      LOG.warn(e.toString(), e);
     }
-  }
-
-  /**
-   * See
-   * {@link RegionObserver#preCompactScannerOpen(ObserverContext, Store, List, ScanType, long,
-   *   InternalScanner, CompactionLifeCycleTracker, CompactionRequest, long)}
-   */
-  public InternalScanner preCompactScannerOpen(final HStore store,
-      final List<StoreFileScanner> scanners, final ScanType scanType, final long earliestPutTs,
-      final CompactionLifeCycleTracker tracker, final CompactionRequest request, final User user,
-      final long readPoint)
-      throws IOException {
-    return execOperationWithResult(null, coprocEnvironments.isEmpty() ? null :
-        new ObserverOperationWithResult<RegionObserver, InternalScanner>(
-            regionObserverGetter, user) {
-          @Override
-          public InternalScanner call(RegionObserver observer) throws IOException {
-            return observer.preCompactScannerOpen(this, store, scanners, scanType,
-                earliestPutTs, getResult(), tracker, request, readPoint);
-          }
-        });
   }
 
   /**
    * Called prior to selecting the {@link HStoreFile}s for compaction from the list of currently
    * available candidates.
+   * <p>Supports Coprocessor 'bypass' -- 'bypass' is how this method indicates that it changed
+   * the passed in <code>candidates</code>.
    * @param store The store where compaction is being requested
    * @param candidates The currently available store files
    * @param tracker used to track the life cycle of a compaction
-   * @param request the compaction request
    * @param user the user
-   * @return If {@code true}, skip the normal selection process and use the current list
    * @throws IOException
    */
   public boolean preCompactSelection(final HStore store, final List<HStoreFile> candidates,
-      final CompactionLifeCycleTracker tracker, final CompactionRequest request,
-      final User user) throws IOException {
-    return execOperation(coprocEnvironments.isEmpty() ? null : new RegionObserverOperation(user) {
+      final CompactionLifeCycleTracker tracker, final User user) throws IOException {
+    if (coprocEnvironments.isEmpty()) {
+      return false;
+    }
+    boolean bypassable = true;
+    return execOperation(new RegionObserverOperationWithoutResult(user, bypassable) {
       @Override
       public void call(RegionObserver observer) throws IOException {
-        observer.preCompactSelection(this, store, candidates, tracker, request);
+        observer.preCompactSelection(this, store, candidates, tracker);
       }
     });
   }
@@ -594,15 +602,36 @@ public class RegionCoprocessorHost
    * @param request the compaction request
    * @param user the user
    */
-  public void postCompactSelection(final HStore store, final ImmutableList<HStoreFile> selected,
+  public void postCompactSelection(final HStore store, final List<HStoreFile> selected,
       final CompactionLifeCycleTracker tracker, final CompactionRequest request,
       final User user) throws IOException {
-    execOperation(coprocEnvironments.isEmpty() ? null : new RegionObserverOperation(user) {
+    if (coprocEnvironments.isEmpty()) {
+      return;
+    }
+    execOperation(new RegionObserverOperationWithoutResult(user) {
       @Override
       public void call(RegionObserver observer) throws IOException {
         observer.postCompactSelection(this, store, selected, tracker, request);
       }
     });
+  }
+
+  /**
+   * Called prior to opening store scanner for compaction.
+   */
+  public ScanInfo preCompactScannerOpen(HStore store, ScanType scanType,
+      CompactionLifeCycleTracker tracker, CompactionRequest request, User user) throws IOException {
+    if (coprocEnvironments.isEmpty()) {
+      return store.getScanInfo();
+    }
+    CustomizedScanInfoBuilder builder = new CustomizedScanInfoBuilder(store.getScanInfo());
+    execOperation(new RegionObserverOperationWithoutResult(user) {
+      @Override
+      public void call(RegionObserver observer) throws IOException {
+        observer.preCompactScannerOpen(this, store, scanType, builder, tracker, request);
+      }
+    });
+    return builder.build();
   }
 
   /**
@@ -613,17 +642,27 @@ public class RegionCoprocessorHost
    * @param tracker used to track the life cycle of a compaction
    * @param request the compaction request
    * @param user the user
+   * @return Scanner to use (cannot be null!)
    * @throws IOException
    */
   public InternalScanner preCompact(final HStore store, final InternalScanner scanner,
       final ScanType scanType, final CompactionLifeCycleTracker tracker,
       final CompactionRequest request, final User user) throws IOException {
-    return execOperationWithResult(false, scanner, coprocEnvironments.isEmpty() ? null :
-        new ObserverOperationWithResult<RegionObserver, InternalScanner>(
-            regionObserverGetter, user) {
+    InternalScanner defaultResult = scanner;
+    if (coprocEnvironments.isEmpty()) {
+      return defaultResult;
+    }
+    return execOperationWithResult(
+        new ObserverOperationWithResult<RegionObserver, InternalScanner>(regionObserverGetter,
+            defaultResult, user) {
           @Override
           public InternalScanner call(RegionObserver observer) throws IOException {
-            return observer.preCompact(this, store, getResult(), scanType, tracker, request);
+            InternalScanner scanner =
+                observer.preCompact(this, store, getResult(), scanType, tracker, request);
+            if (scanner == null) {
+              throw new CoprocessorException("Null Scanner return disallowed!");
+            }
+            return scanner;
           }
         });
   }
@@ -640,7 +679,7 @@ public class RegionCoprocessorHost
   public void postCompact(final HStore store, final HStoreFile resultFile,
       final CompactionLifeCycleTracker tracker, final CompactionRequest request, final User user)
       throws IOException {
-    execOperation(coprocEnvironments.isEmpty() ? null : new RegionObserverOperation(user) {
+    execOperation(coprocEnvironments.isEmpty()? null: new RegionObserverOperationWithoutResult(user) {
       @Override
       public void call(RegionObserver observer) throws IOException {
         observer.postCompact(this, store, resultFile, tracker, request);
@@ -649,16 +688,42 @@ public class RegionCoprocessorHost
   }
 
   /**
-   * Invoked before a memstore flush
-   * @throws IOException
+   * Invoked before create StoreScanner for flush.
    */
-  public InternalScanner preFlush(HStore store, final InternalScanner scanner)
+  public ScanInfo preFlushScannerOpen(HStore store, FlushLifeCycleTracker tracker)
       throws IOException {
-    return execOperationWithResult(false, scanner, coprocEnvironments.isEmpty() ? null :
-        new ObserverOperationWithResult<RegionObserver, InternalScanner>(regionObserverGetter) {
+    if (coprocEnvironments.isEmpty()) {
+      return store.getScanInfo();
+    }
+    CustomizedScanInfoBuilder builder = new CustomizedScanInfoBuilder(store.getScanInfo());
+    execOperation(new RegionObserverOperationWithoutResult() {
+      @Override
+      public void call(RegionObserver observer) throws IOException {
+        observer.preFlushScannerOpen(this, store, builder, tracker);
+      }
+    });
+    return builder.build();
+  }
+
+  /**
+   * Invoked before a memstore flush
+   * @return Scanner to use (cannot be null!)
+   * @throws IOException
+   */
+  public InternalScanner preFlush(HStore store, InternalScanner scanner,
+      FlushLifeCycleTracker tracker) throws IOException {
+    if (coprocEnvironments.isEmpty()) {
+      return scanner;
+    }
+    return execOperationWithResult(
+        new ObserverOperationWithResult<RegionObserver, InternalScanner>(regionObserverGetter, scanner) {
           @Override
           public InternalScanner call(RegionObserver observer) throws IOException {
-            return observer.preFlush(this, store, getResult());
+            InternalScanner scanner = observer.preFlush(this, store, getResult(), tracker);
+            if (scanner == null) {
+              throw new CoprocessorException("Null Scanner return disallowed!");
+            }
+            return scanner;
           }
         });
   }
@@ -667,39 +732,11 @@ public class RegionCoprocessorHost
    * Invoked before a memstore flush
    * @throws IOException
    */
-  public void preFlush() throws IOException {
-    execOperation(coprocEnvironments.isEmpty() ? null : new RegionObserverOperation() {
+  public void preFlush(FlushLifeCycleTracker tracker) throws IOException {
+    execOperation(coprocEnvironments.isEmpty()? null: new RegionObserverOperationWithoutResult() {
       @Override
       public void call(RegionObserver observer) throws IOException {
-        observer.preFlush(this);
-      }
-    });
-  }
-
-  /**
-   * See
-   * {@link RegionObserver#preFlushScannerOpen(ObserverContext, Store, List, InternalScanner, long)}
-   */
-  public InternalScanner preFlushScannerOpen(final HStore store,
-      final List<KeyValueScanner> scanners, final long readPoint) throws IOException {
-    return execOperationWithResult(null, coprocEnvironments.isEmpty() ? null :
-        new ObserverOperationWithResult<RegionObserver, InternalScanner>(regionObserverGetter) {
-          @Override
-          public InternalScanner call(RegionObserver observer) throws IOException {
-            return observer.preFlushScannerOpen(this, store, scanners, getResult(), readPoint);
-          }
-        });
-  }
-
-  /**
-   * Invoked after a memstore flush
-   * @throws IOException
-   */
-  public void postFlush() throws IOException {
-    execOperation(coprocEnvironments.isEmpty() ? null : new RegionObserverOperation() {
-      @Override
-      public void call(RegionObserver observer) throws IOException {
-        observer.postFlush(this);
+        observer.preFlush(this, tracker);
       }
     });
   }
@@ -708,24 +745,101 @@ public class RegionCoprocessorHost
    * Invoked after a memstore flush
    * @throws IOException
    */
-  public void postFlush(final HStore store, final HStoreFile storeFile) throws IOException {
-    execOperation(coprocEnvironments.isEmpty() ? null : new RegionObserverOperation() {
+  public void postFlush(FlushLifeCycleTracker tracker) throws IOException {
+    execOperation(coprocEnvironments.isEmpty()? null: new RegionObserverOperationWithoutResult() {
       @Override
       public void call(RegionObserver observer) throws IOException {
-        observer.postFlush(this, store, storeFile);
+        observer.postFlush(this, tracker);
+      }
+    });
+  }
+
+  /**
+   * Invoked before in memory compaction.
+   */
+  public void preMemStoreCompaction(HStore store) throws IOException {
+    execOperation(coprocEnvironments.isEmpty() ? null : new RegionObserverOperationWithoutResult() {
+      @Override
+      public void call(RegionObserver observer) throws IOException {
+        observer.preMemStoreCompaction(this, store);
+      }
+    });
+  }
+
+  /**
+   * Invoked before create StoreScanner for in memory compaction.
+   */
+  public ScanInfo preMemStoreCompactionCompactScannerOpen(HStore store) throws IOException {
+    CustomizedScanInfoBuilder builder = new CustomizedScanInfoBuilder(store.getScanInfo());
+    execOperation(coprocEnvironments.isEmpty() ? null : new RegionObserverOperationWithoutResult() {
+      @Override
+      public void call(RegionObserver observer) throws IOException {
+        observer.preMemStoreCompactionCompactScannerOpen(this, store, builder);
+      }
+    });
+    return builder.build();
+  }
+
+  /**
+   * Invoked before compacting memstore.
+   */
+  public InternalScanner preMemStoreCompactionCompact(HStore store, InternalScanner scanner)
+      throws IOException {
+    if (coprocEnvironments.isEmpty()) {
+      return scanner;
+    }
+    return execOperationWithResult(new ObserverOperationWithResult<RegionObserver, InternalScanner>(
+        regionObserverGetter, scanner) {
+      @Override
+      public InternalScanner call(RegionObserver observer) throws IOException {
+        return observer.preMemStoreCompactionCompact(this, store, getResult());
+      }
+    });
+  }
+
+  /**
+   * Invoked after in memory compaction.
+   */
+  public void postMemStoreCompaction(HStore store) throws IOException {
+    execOperation(coprocEnvironments.isEmpty() ? null : new RegionObserverOperationWithoutResult() {
+      @Override
+      public void call(RegionObserver observer) throws IOException {
+        observer.postMemStoreCompaction(this, store);
+      }
+    });
+  }
+
+  /**
+   * Invoked after a memstore flush
+   * @throws IOException
+   */
+  public void postFlush(HStore store, HStoreFile storeFile, FlushLifeCycleTracker tracker)
+      throws IOException {
+    if (coprocEnvironments.isEmpty()) {
+      return;
+    }
+    execOperation(new RegionObserverOperationWithoutResult() {
+      @Override
+      public void call(RegionObserver observer) throws IOException {
+        observer.postFlush(this, store, storeFile, tracker);
       }
     });
   }
 
   // RegionObserver support
   /**
+   * Supports Coprocessor 'bypass'.
    * @param get the Get request
-   * @return true if default processing should be bypassed
+   * @param results What to return if return is true/'bypass'.
+   * @return true if default processing should be bypassed.
    * @exception IOException Exception
    */
-  public boolean preGet(final Get get, final List<Cell> results)
-      throws IOException {
-    return execOperation(coprocEnvironments.isEmpty() ? null : new RegionObserverOperation() {
+  public boolean preGet(final Get get, final List<Cell> results) throws IOException {
+    if (coprocEnvironments.isEmpty()) {
+      return false;
+    }
+    boolean bypassable = true;
+    return execOperation(new RegionObserverOperationWithoutResult(bypassable) {
       @Override
       public void call(RegionObserver observer) throws IOException {
         observer.preGetOp(this, get, results);
@@ -735,12 +849,15 @@ public class RegionCoprocessorHost
 
   /**
    * @param get the Get request
-   * @param results the result sett
+   * @param results the result set
    * @exception IOException Exception
    */
   public void postGet(final Get get, final List<Cell> results)
       throws IOException {
-    execOperation(coprocEnvironments.isEmpty() ? null : new RegionObserverOperation() {
+    if (coprocEnvironments.isEmpty()) {
+      return;
+    }
+    execOperation(new RegionObserverOperationWithoutResult() {
       @Override
       public void call(RegionObserver observer) throws IOException {
         observer.postGetOp(this, get, results);
@@ -749,14 +866,20 @@ public class RegionCoprocessorHost
   }
 
   /**
+   * Supports Coprocessor 'bypass'.
    * @param get the Get request
-   * @return true or false to return to client if bypassing normal operation,
-   * or null otherwise
+   * @return true or false to return to client if bypassing normal operation, or null otherwise
    * @exception IOException Exception
    */
   public Boolean preExists(final Get get) throws IOException {
-    return execOperationWithResult(true, false, coprocEnvironments.isEmpty() ? null :
-        new ObserverOperationWithResult<RegionObserver, Boolean>(regionObserverGetter) {
+    boolean bypassable = true;
+    boolean defaultResult = false;
+    if (coprocEnvironments.isEmpty()) {
+      return null;
+    }
+    return execOperationWithResult(
+        new ObserverOperationWithResult<RegionObserver, Boolean>(regionObserverGetter,
+            defaultResult, bypassable) {
           @Override
           public Boolean call(RegionObserver observer) throws IOException {
             return observer.preExists(this, get, getResult());
@@ -766,14 +889,17 @@ public class RegionCoprocessorHost
 
   /**
    * @param get the Get request
-   * @param exists the result returned by the region server
+   * @param result the result returned by the region server
    * @return the result to return to the client
    * @exception IOException Exception
    */
-  public boolean postExists(final Get get, boolean exists)
+  public boolean postExists(final Get get, boolean result)
       throws IOException {
-    return execOperationWithResult(exists, coprocEnvironments.isEmpty() ? null :
-        new ObserverOperationWithResult<RegionObserver, Boolean>(regionObserverGetter) {
+    if (this.coprocEnvironments.isEmpty()) {
+      return result;
+    }
+    return execOperationWithResult(
+        new ObserverOperationWithResult<RegionObserver, Boolean>(regionObserverGetter, result) {
           @Override
           public Boolean call(RegionObserver observer) throws IOException {
             return observer.postExists(this, get, getResult());
@@ -782,38 +908,47 @@ public class RegionCoprocessorHost
   }
 
   /**
+   * Supports Coprocessor 'bypass'.
    * @param put The Put object
    * @param edit The WALEdit object.
-   * @param durability The durability used
    * @return true if default processing should be bypassed
    * @exception IOException Exception
    */
-  public boolean prePut(final Put put, final WALEdit edit, final Durability durability)
-      throws IOException {
-    return execOperation(coprocEnvironments.isEmpty() ? null : new RegionObserverOperation() {
+  public boolean prePut(final Put put, final WALEdit edit) throws IOException {
+    if (coprocEnvironments.isEmpty()) {
+      return false;
+    }
+    boolean bypassable = true;
+    return execOperation(new RegionObserverOperationWithoutResult(bypassable) {
       @Override
       public void call(RegionObserver observer) throws IOException {
-        observer.prePut(this, put, edit, durability);
+        observer.prePut(this, put, edit);
       }
     });
   }
 
   /**
+   * Supports Coprocessor 'bypass'.
    * @param mutation - the current mutation
    * @param kv - the current cell
    * @param byteNow - current timestamp in bytes
    * @param get - the get that could be used
    * Note that the get only does not specify the family and qualifier that should be used
    * @return true if default processing should be bypassed
-   * @exception IOException
-   *              Exception
+   * @deprecated In hbase-2.0.0. Will be removed in hbase-3.0.0. Added explicitly for a single
+   * Coprocessor for its needs only. Will be removed.
    */
+  @Deprecated
   public boolean prePrepareTimeStampForDeleteVersion(final Mutation mutation,
       final Cell kv, final byte[] byteNow, final Get get) throws IOException {
-    return execOperation(coprocEnvironments.isEmpty() ? null : new RegionObserverOperation() {
+    if (coprocEnvironments.isEmpty()) {
+      return false;
+    }
+    boolean bypassable = true;
+    return execOperation(new RegionObserverOperationWithoutResult(bypassable) {
       @Override
       public void call(RegionObserver observer) throws IOException {
-        observer.prePrepareTimeStampForDeleteVersion(this, mutation, kv, byteNow, get);
+          observer.prePrepareTimeStampForDeleteVersion(this, mutation, kv, byteNow, get);
       }
     });
   }
@@ -821,15 +956,36 @@ public class RegionCoprocessorHost
   /**
    * @param put The Put object
    * @param edit The WALEdit object.
-   * @param durability The durability used
    * @exception IOException Exception
    */
-  public void postPut(final Put put, final WALEdit edit, final Durability durability)
-      throws IOException {
-    execOperation(coprocEnvironments.isEmpty() ? null : new RegionObserverOperation() {
+  public void postPut(final Put put, final WALEdit edit) throws IOException {
+    if (coprocEnvironments.isEmpty()) {
+      return;
+    }
+    execOperation(new RegionObserverOperationWithoutResult() {
       @Override
       public void call(RegionObserver observer) throws IOException {
-        observer.postPut(this, put, edit, durability);
+        observer.postPut(this, put, edit);
+      }
+    });
+  }
+
+  /**
+   * Supports Coprocessor 'bypass'.
+   * @param delete The Delete object
+   * @param edit The WALEdit object.
+   * @return true if default processing should be bypassed
+   * @exception IOException Exception
+   */
+  public boolean preDelete(final Delete delete, final WALEdit edit) throws IOException {
+    if (this.coprocEnvironments.isEmpty()) {
+      return false;
+    }
+    boolean bypassable = true;
+    return execOperation(new RegionObserverOperationWithoutResult(bypassable) {
+      @Override
+      public void call(RegionObserver observer) throws IOException {
+        observer.preDelete(this, delete, edit);
       }
     });
   }
@@ -837,44 +993,24 @@ public class RegionCoprocessorHost
   /**
    * @param delete The Delete object
    * @param edit The WALEdit object.
-   * @param durability The durability used
-   * @return true if default processing should be bypassed
    * @exception IOException Exception
    */
-  public boolean preDelete(final Delete delete, final WALEdit edit, final Durability durability)
-      throws IOException {
-    return execOperation(coprocEnvironments.isEmpty() ? null : new RegionObserverOperation() {
-      @Override
-      public void call(RegionObserver observer) throws IOException {
-        observer.preDelete(this, delete, edit, durability);
-      }
-    });
+  public void postDelete(final Delete delete, final WALEdit edit) throws IOException {
+    execOperation(coprocEnvironments.isEmpty()? null:
+      new RegionObserverOperationWithoutResult() {
+        @Override
+        public void call(RegionObserver observer) throws IOException {
+          observer.postDelete(this, delete, edit);
+        }
+      });
   }
 
-  /**
-   * @param delete The Delete object
-   * @param edit The WALEdit object.
-   * @param durability The durability used
-   * @exception IOException Exception
-   */
-  public void postDelete(final Delete delete, final WALEdit edit, final Durability durability)
-      throws IOException {
-    execOperation(coprocEnvironments.isEmpty() ? null : new RegionObserverOperation() {
-      @Override
-      public void call(RegionObserver observer) throws IOException {
-        observer.postDelete(this, delete, edit, durability);
-      }
-    });
-  }
-
-  /**
-   * @param miniBatchOp
-   * @return true if default processing should be bypassed
-   * @throws IOException
-   */
-  public boolean preBatchMutate(
+  public void preBatchMutate(
       final MiniBatchOperationInProgress<Mutation> miniBatchOp) throws IOException {
-    return execOperation(coprocEnvironments.isEmpty() ? null : new RegionObserverOperation() {
+    if(this.coprocEnvironments.isEmpty()) {
+      return;
+    }
+    execOperation(new RegionObserverOperationWithoutResult() {
       @Override
       public void call(RegionObserver observer) throws IOException {
         observer.preBatchMutate(this, miniBatchOp);
@@ -882,13 +1018,12 @@ public class RegionCoprocessorHost
     });
   }
 
-  /**
-   * @param miniBatchOp
-   * @throws IOException
-   */
   public void postBatchMutate(
       final MiniBatchOperationInProgress<Mutation> miniBatchOp) throws IOException {
-    execOperation(coprocEnvironments.isEmpty() ? null : new RegionObserverOperation() {
+    if (this.coprocEnvironments.isEmpty()) {
+      return;
+    }
+    execOperation(new RegionObserverOperationWithoutResult() {
       @Override
       public void call(RegionObserver observer) throws IOException {
         observer.postBatchMutate(this, miniBatchOp);
@@ -899,7 +1034,10 @@ public class RegionCoprocessorHost
   public void postBatchMutateIndispensably(
       final MiniBatchOperationInProgress<Mutation> miniBatchOp, final boolean success)
       throws IOException {
-    execOperation(coprocEnvironments.isEmpty() ? null : new RegionObserverOperation() {
+    if (this.coprocEnvironments.isEmpty()) {
+      return;
+    }
+    execOperation(new RegionObserverOperationWithoutResult() {
       @Override
       public void call(RegionObserver observer) throws IOException {
         observer.postBatchMutateIndispensably(this, miniBatchOp, success);
@@ -908,174 +1046,113 @@ public class RegionCoprocessorHost
   }
 
   /**
-   * @param row row to check
-   * @param family column family
-   * @param qualifier column qualifier
-   * @param op the comparison operation
-   * @param comparator the comparator
-   * @param put data to put if check succeeds
-   * @return true or false to return to client if default processing should
-   * be bypassed, or null otherwise
-   * @throws IOException e
-   */
-  public Boolean preCheckAndPut(final byte [] row, final byte [] family,
-      final byte [] qualifier, final CompareOperator op,
-      final ByteArrayComparable comparator, final Put put)
-      throws IOException {
-    return execOperationWithResult(true, false, coprocEnvironments.isEmpty() ? null :
-        new ObserverOperationWithResult<RegionObserver, Boolean>(regionObserverGetter) {
-          @Override
-          public Boolean call(RegionObserver observer) throws IOException {
-            return observer.preCheckAndPut(this, row, family, qualifier,
-                op, comparator, put, getResult());
-          }
-        });
-  }
-
-  /**
-   * @param row row to check
-   * @param family column family
-   * @param qualifier column qualifier
-   * @param op the comparison operation
-   * @param comparator the comparator
-   * @param put data to put if check succeeds
-   * @return true or false to return to client if default processing should
-   * be bypassed, or null otherwise
-   * @throws IOException e
-   */
-  public Boolean preCheckAndPutAfterRowLock(
-      final byte[] row, final byte[] family, final byte[] qualifier, final CompareOperator op,
-      final ByteArrayComparable comparator, final Put put) throws IOException {
-    return execOperationWithResult(true, false, coprocEnvironments.isEmpty() ? null :
-        new ObserverOperationWithResult<RegionObserver, Boolean>(regionObserverGetter) {
-          @Override
-          public Boolean call(RegionObserver observer) throws IOException {
-            return observer.preCheckAndPutAfterRowLock(this, row, family, qualifier,
-                op, comparator, put, getResult());
-          }
-        });
-  }
-
-  /**
-   * @param row row to check
-   * @param family column family
-   * @param qualifier column qualifier
-   * @param op the comparison operation
-   * @param comparator the comparator
-   * @param put data to put if check succeeds
-   * @throws IOException e
-   */
-  public boolean postCheckAndPut(final byte [] row, final byte [] family,
-      final byte [] qualifier, final CompareOperator op,
-      final ByteArrayComparable comparator, final Put put,
-      boolean result) throws IOException {
-    return execOperationWithResult(result, coprocEnvironments.isEmpty() ? null :
-        new ObserverOperationWithResult<RegionObserver, Boolean>(regionObserverGetter) {
-          @Override
-          public Boolean call(RegionObserver observer) throws IOException {
-            return observer.postCheckAndPut(this, row, family, qualifier,
-                op, comparator, put, getResult());
-          }
-        });
-  }
-
-  /**
-   * @param row row to check
-   * @param family column family
-   * @param qualifier column qualifier
-   * @param op the comparison operation
-   * @param comparator the comparator
-   * @param delete delete to commit if check succeeds
-   * @return true or false to return to client if default processing should
-   * be bypassed, or null otherwise
-   * @throws IOException e
-   */
-  public Boolean preCheckAndDelete(final byte [] row, final byte [] family,
-      final byte [] qualifier, final CompareOperator op,
-      final ByteArrayComparable comparator, final Delete delete)
-      throws IOException {
-    return execOperationWithResult(true, false, coprocEnvironments.isEmpty() ? null :
-        new ObserverOperationWithResult<RegionObserver, Boolean>(regionObserverGetter) {
-          @Override
-          public Boolean call(RegionObserver observer) throws IOException {
-            return observer.preCheckAndDelete(this, row, family,
-                qualifier, op, comparator, delete, getResult());
-          }
-        });
-  }
-
-  /**
-   * @param row row to check
-   * @param family column family
-   * @param qualifier column qualifier
-   * @param op the comparison operation
-   * @param comparator the comparator
-   * @param delete delete to commit if check succeeds
-   * @return true or false to return to client if default processing should
-   * be bypassed, or null otherwise
-   * @throws IOException e
-   */
-  public Boolean preCheckAndDeleteAfterRowLock(final byte[] row, final byte[] family,
-      final byte[] qualifier, final CompareOperator op, final ByteArrayComparable comparator,
-      final Delete delete) throws IOException {
-    return execOperationWithResult(true, false, coprocEnvironments.isEmpty() ? null :
-        new ObserverOperationWithResult<RegionObserver, Boolean>(regionObserverGetter) {
-          @Override
-          public Boolean call(RegionObserver observer) throws IOException {
-            return observer.preCheckAndDeleteAfterRowLock(this, row,
-                family, qualifier, op, comparator, delete, getResult());
-          }
-        });
-  }
-
-  /**
-   * @param row row to check
-   * @param family column family
-   * @param qualifier column qualifier
-   * @param op the comparison operation
-   * @param comparator the comparator
-   * @param delete delete to commit if check succeeds
-   * @throws IOException e
-   */
-  public boolean postCheckAndDelete(final byte [] row, final byte [] family,
-      final byte [] qualifier, final CompareOperator op,
-      final ByteArrayComparable comparator, final Delete delete,
-      boolean result) throws IOException {
-    return execOperationWithResult(result, coprocEnvironments.isEmpty() ? null :
-        new ObserverOperationWithResult<RegionObserver, Boolean>(regionObserverGetter) {
-          @Override
-          public Boolean call(RegionObserver observer) throws IOException {
-            return observer.postCheckAndDelete(this, row, family,
-                qualifier, op, comparator, delete, getResult());
-          }
-        });
-  }
-
-  /**
-   * @param append append object
-   * @return result to return to client if default operation should be
-   * bypassed, null otherwise
+   * Supports Coprocessor 'bypass'.
+   * @param checkAndMutate the CheckAndMutate object
+   * @return true or false to return to client if default processing should be bypassed, or null
+   *   otherwise
    * @throws IOException if an error occurred on the coprocessor
    */
-  public Result preAppend(final Append append) throws IOException {
-    return execOperationWithResult(true, null, coprocEnvironments.isEmpty() ? null :
-        new ObserverOperationWithResult<RegionObserver, Result>(regionObserverGetter) {
+  public CheckAndMutateResult preCheckAndMutate(CheckAndMutate checkAndMutate)
+    throws IOException {
+    boolean bypassable = true;
+    CheckAndMutateResult defaultResult = new CheckAndMutateResult(false, null);
+    if (coprocEnvironments.isEmpty()) {
+      return null;
+    }
+    return execOperationWithResult(
+      new ObserverOperationWithResult<RegionObserver, CheckAndMutateResult>(
+        regionObserverGetter, defaultResult, bypassable) {
+        @Override
+        public CheckAndMutateResult call(RegionObserver observer) throws IOException {
+          return observer.preCheckAndMutate(this, checkAndMutate, getResult());
+        }
+      });
+  }
+
+  /**
+   * Supports Coprocessor 'bypass'.
+   * @param checkAndMutate the CheckAndMutate object
+   * @return true or false to return to client if default processing should be bypassed, or null
+   *   otherwise
+   * @throws IOException if an error occurred on the coprocessor
+   */
+  public CheckAndMutateResult preCheckAndMutateAfterRowLock(CheckAndMutate checkAndMutate)
+    throws IOException {
+    boolean bypassable = true;
+    CheckAndMutateResult defaultResult = new CheckAndMutateResult(false, null);
+    if (coprocEnvironments.isEmpty()) {
+      return null;
+    }
+    return execOperationWithResult(
+      new ObserverOperationWithResult<RegionObserver, CheckAndMutateResult>(
+        regionObserverGetter, defaultResult, bypassable) {
+        @Override
+        public CheckAndMutateResult call(RegionObserver observer) throws IOException {
+          return observer.preCheckAndMutateAfterRowLock(this, checkAndMutate, getResult());
+        }
+      });
+  }
+
+  /**
+   * @param checkAndMutate the CheckAndMutate object
+   * @param result the result returned by the checkAndMutate
+   * @return true or false to return to client if default processing should be bypassed, or null
+   *   otherwise
+   * @throws IOException if an error occurred on the coprocessor
+   */
+  public CheckAndMutateResult postCheckAndMutate(CheckAndMutate checkAndMutate,
+    CheckAndMutateResult result) throws IOException {
+    if (this.coprocEnvironments.isEmpty()) {
+      return result;
+    }
+    return execOperationWithResult(
+      new ObserverOperationWithResult<RegionObserver, CheckAndMutateResult>(
+        regionObserverGetter, result) {
+        @Override
+        public CheckAndMutateResult call(RegionObserver observer) throws IOException {
+          return observer.postCheckAndMutate(this, checkAndMutate, getResult());
+        }
+      });
+  }
+
+  /**
+   * Supports Coprocessor 'bypass'.
+   * @param append append object
+   * @param edit The WALEdit object.
+   * @return result to return to client if default operation should be bypassed, null otherwise
+   * @throws IOException if an error occurred on the coprocessor
+   */
+  public Result preAppend(final Append append, final WALEdit edit) throws IOException {
+    boolean bypassable = true;
+    Result defaultResult = null;
+    if (this.coprocEnvironments.isEmpty()) {
+      return defaultResult;
+    }
+    return execOperationWithResult(
+      new ObserverOperationWithResult<RegionObserver, Result>(regionObserverGetter, defaultResult,
+            bypassable) {
           @Override
           public Result call(RegionObserver observer) throws IOException {
-            return observer.preAppend(this, append);
+            return observer.preAppend(this, append, edit);
           }
         });
   }
 
   /**
+   * Supports Coprocessor 'bypass'.
    * @param append append object
-   * @return result to return to client if default operation should be
-   * bypassed, null otherwise
+   * @return result to return to client if default operation should be bypassed, null otherwise
    * @throws IOException if an error occurred on the coprocessor
    */
   public Result preAppendAfterRowLock(final Append append) throws IOException {
-    return execOperationWithResult(true, null, coprocEnvironments.isEmpty() ? null :
-        new ObserverOperationWithResult<RegionObserver, Result>(regionObserverGetter) {
+    boolean bypassable = true;
+    Result defaultResult = null;
+    if (this.coprocEnvironments.isEmpty()) {
+      return defaultResult;
+    }
+    return execOperationWithResult(
+        new ObserverOperationWithResult<RegionObserver, Result>(regionObserverGetter,
+            defaultResult, bypassable) {
           @Override
           public Result call(RegionObserver observer) throws IOException {
             return observer.preAppendAfterRowLock(this, append);
@@ -1084,30 +1161,43 @@ public class RegionCoprocessorHost
   }
 
   /**
+   * Supports Coprocessor 'bypass'.
    * @param increment increment object
-   * @return result to return to client if default operation should be
-   * bypassed, null otherwise
+   * @param edit The WALEdit object.
+   * @return result to return to client if default operation should be bypassed, null otherwise
    * @throws IOException if an error occurred on the coprocessor
    */
-  public Result preIncrement(final Increment increment) throws IOException {
-    return execOperationWithResult(true, null, coprocEnvironments.isEmpty() ? null :
-        new ObserverOperationWithResult<RegionObserver, Result>(regionObserverGetter) {
+  public Result preIncrement(final Increment increment, final WALEdit edit) throws IOException {
+    boolean bypassable = true;
+    Result defaultResult = null;
+    if (coprocEnvironments.isEmpty()) {
+      return defaultResult;
+    }
+    return execOperationWithResult(
+        new ObserverOperationWithResult<RegionObserver, Result>(regionObserverGetter, defaultResult,
+            bypassable) {
           @Override
           public Result call(RegionObserver observer) throws IOException {
-            return observer.preIncrement(this, increment);
+            return observer.preIncrement(this, increment, edit);
           }
         });
   }
 
   /**
+   * Supports Coprocessor 'bypass'.
    * @param increment increment object
-   * @return result to return to client if default operation should be
-   * bypassed, null otherwise
+   * @return result to return to client if default operation should be bypassed, null otherwise
    * @throws IOException if an error occurred on the coprocessor
    */
   public Result preIncrementAfterRowLock(final Increment increment) throws IOException {
-    return execOperationWithResult(true, null, coprocEnvironments.isEmpty() ? null :
-        new ObserverOperationWithResult<RegionObserver, Result>(regionObserverGetter) {
+    boolean bypassable = true;
+    Result defaultResult = null;
+    if (coprocEnvironments.isEmpty()) {
+      return defaultResult;
+    }
+    return execOperationWithResult(
+        new ObserverOperationWithResult<RegionObserver, Result>(regionObserverGetter, defaultResult,
+            bypassable) {
           @Override
           public Result call(RegionObserver observer) throws IOException {
             return observer.preIncrementAfterRowLock(this, increment);
@@ -1118,14 +1208,19 @@ public class RegionCoprocessorHost
   /**
    * @param append Append object
    * @param result the result returned by the append
+   * @param edit The WALEdit object.
    * @throws IOException if an error occurred on the coprocessor
    */
-  public Result postAppend(final Append append, final Result result) throws IOException {
-    return execOperationWithResult(result, coprocEnvironments.isEmpty() ? null :
-        new ObserverOperationWithResult<RegionObserver, Result>(regionObserverGetter) {
+  public Result postAppend(final Append append, final Result result, final WALEdit edit)
+    throws IOException {
+    if (this.coprocEnvironments.isEmpty()) {
+      return result;
+    }
+    return execOperationWithResult(
+        new ObserverOperationWithResult<RegionObserver, Result>(regionObserverGetter, result) {
           @Override
           public Result call(RegionObserver observer) throws IOException {
-            return observer.postAppend(this, append, result);
+            return observer.postAppend(this, append, result, edit);
           }
         });
   }
@@ -1133,47 +1228,34 @@ public class RegionCoprocessorHost
   /**
    * @param increment increment object
    * @param result the result returned by postIncrement
+   * @param edit The WALEdit object.
    * @throws IOException if an error occurred on the coprocessor
    */
-  public Result postIncrement(final Increment increment, Result result) throws IOException {
-    return execOperationWithResult(result, coprocEnvironments.isEmpty() ? null :
-        new ObserverOperationWithResult<RegionObserver, Result>(regionObserverGetter) {
+  public Result postIncrement(final Increment increment, Result result, final WALEdit edit)
+    throws IOException {
+    if (this.coprocEnvironments.isEmpty()) {
+      return result;
+    }
+    return execOperationWithResult(
+        new ObserverOperationWithResult<RegionObserver, Result>(regionObserverGetter, result) {
           @Override
           public Result call(RegionObserver observer) throws IOException {
-            return observer.postIncrement(this, increment, getResult());
+            return observer.postIncrement(this, increment, getResult(), edit);
           }
         });
   }
 
   /**
    * @param scan the Scan specification
-   * @return scanner id to return to client if default operation should be
-   * bypassed, null otherwise
    * @exception IOException Exception
    */
-  public RegionScanner preScannerOpen(final Scan scan) throws IOException {
-    return execOperationWithResult(true, null, coprocEnvironments.isEmpty() ? null :
-        new ObserverOperationWithResult<RegionObserver, RegionScanner>(regionObserverGetter) {
-          @Override
-          public RegionScanner call(RegionObserver observer) throws IOException {
-            return observer.preScannerOpen(this, scan, getResult());
-          }
-        });
-  }
-
-  /**
-   * See
-   * {@link RegionObserver#preStoreScannerOpen(ObserverContext, Store, Scan, NavigableSet, KeyValueScanner, long)}
-   */
-  public KeyValueScanner preStoreScannerOpen(final HStore store, final Scan scan,
-      final NavigableSet<byte[]> targetCols, final long readPt) throws IOException {
-    return execOperationWithResult(null, coprocEnvironments.isEmpty() ? null :
-        new ObserverOperationWithResult<RegionObserver, KeyValueScanner>(regionObserverGetter) {
-          @Override
-          public KeyValueScanner call(RegionObserver observer) throws IOException {
-            return observer.preStoreScannerOpen(this, store, scan, targetCols, getResult(), readPt);
-          }
-        });
+  public void preScannerOpen(final Scan scan) throws IOException {
+    execOperation(coprocEnvironments.isEmpty()? null: new RegionObserverOperationWithoutResult() {
+      @Override
+      public void call(RegionObserver observer) throws IOException {
+        observer.preScannerOpen(this, scan);
+      }
+    });
   }
 
   /**
@@ -1183,8 +1265,11 @@ public class RegionCoprocessorHost
    * @exception IOException Exception
    */
   public RegionScanner postScannerOpen(final Scan scan, RegionScanner s) throws IOException {
-    return execOperationWithResult(s, coprocEnvironments.isEmpty() ? null :
-        new ObserverOperationWithResult<RegionObserver, RegionScanner>(regionObserverGetter) {
+    if (this.coprocEnvironments.isEmpty()) {
+      return s;
+    }
+    return execOperationWithResult(
+        new ObserverOperationWithResult<RegionObserver, RegionScanner>(regionObserverGetter, s) {
           @Override
           public RegionScanner call(RegionObserver observer) throws IOException {
             return observer.postScannerOpen(this, scan, getResult());
@@ -1196,14 +1281,19 @@ public class RegionCoprocessorHost
    * @param s the scanner
    * @param results the result set returned by the region server
    * @param limit the maximum number of results to return
-   * @return 'has next' indication to client if bypassing default behavior, or
-   * null otherwise
+   * @return 'has next' indication to client if bypassing default behavior, or null otherwise
    * @exception IOException Exception
    */
   public Boolean preScannerNext(final InternalScanner s,
       final List<Result> results, final int limit) throws IOException {
-    return execOperationWithResult(true, false, coprocEnvironments.isEmpty() ? null :
-        new ObserverOperationWithResult<RegionObserver, Boolean>(regionObserverGetter) {
+    boolean bypassable = true;
+    boolean defaultResult = false;
+    if (coprocEnvironments.isEmpty()) {
+      return null;
+    }
+    return execOperationWithResult(
+        new ObserverOperationWithResult<RegionObserver, Boolean>(regionObserverGetter,
+            defaultResult, bypassable) {
           @Override
           public Boolean call(RegionObserver observer) throws IOException {
             return observer.preScannerNext(this, s, results, limit, getResult());
@@ -1222,8 +1312,11 @@ public class RegionCoprocessorHost
   public boolean postScannerNext(final InternalScanner s,
       final List<Result> results, final int limit, boolean hasMore)
       throws IOException {
-    return execOperationWithResult(hasMore, coprocEnvironments.isEmpty() ? null :
-        new ObserverOperationWithResult<RegionObserver, Boolean>(regionObserverGetter) {
+    if (this.coprocEnvironments.isEmpty()) {
+      return hasMore;
+    }
+    return execOperationWithResult(
+        new ObserverOperationWithResult<RegionObserver, Boolean>(regionObserverGetter, hasMore) {
           @Override
           public Boolean call(RegionObserver observer) throws IOException {
             return observer.postScannerNext(this, s, results, limit, getResult());
@@ -1242,23 +1335,32 @@ public class RegionCoprocessorHost
   public boolean postScannerFilterRow(final InternalScanner s, final Cell curRowCell)
       throws IOException {
     // short circuit for performance
-    if (!hasCustomPostScannerFilterRow) return true;
-    return execOperationWithResult(true, coprocEnvironments.isEmpty() ? null :
-        new ObserverOperationWithResult<RegionObserver, Boolean>(regionObserverGetter) {
-          @Override
-          public Boolean call(RegionObserver observer) throws IOException {
-            return observer.postScannerFilterRow(this, s, curRowCell, getResult());
-          }
-        });
+    boolean defaultResult = true;
+    if (!hasCustomPostScannerFilterRow) {
+      return defaultResult;
+    }
+    if (this.coprocEnvironments.isEmpty()) {
+      return defaultResult;
+    }
+    return execOperationWithResult(new ObserverOperationWithResult<RegionObserver, Boolean>(
+        regionObserverGetter, defaultResult) {
+      @Override
+      public Boolean call(RegionObserver observer) throws IOException {
+        return observer.postScannerFilterRow(this, s, curRowCell, getResult());
+      }
+    });
   }
 
   /**
+   * Supports Coprocessor 'bypass'.
    * @param s the scanner
    * @return true if default behavior should be bypassed, false otherwise
    * @exception IOException Exception
    */
+  // Should this be bypassable?
   public boolean preScannerClose(final InternalScanner s) throws IOException {
-    return execOperation(coprocEnvironments.isEmpty() ? null : new RegionObserverOperation() {
+    return execOperation(coprocEnvironments.isEmpty()? null:
+        new RegionObserverOperationWithoutResult(true) {
       @Override
       public void call(RegionObserver observer) throws IOException {
         observer.preScannerClose(this, s);
@@ -1270,7 +1372,8 @@ public class RegionCoprocessorHost
    * @exception IOException Exception
    */
   public void postScannerClose(final InternalScanner s) throws IOException {
-    execOperation(coprocEnvironments.isEmpty() ? null : new RegionObserverOperation() {
+    execOperation(coprocEnvironments.isEmpty()? null:
+        new RegionObserverOperationWithoutResult() {
       @Override
       public void call(RegionObserver observer) throws IOException {
         observer.postScannerClose(this, s);
@@ -1279,12 +1382,27 @@ public class RegionCoprocessorHost
   }
 
   /**
+   * Called before open store scanner for user scan.
+   */
+  public ScanInfo preStoreScannerOpen(HStore store, Scan scan) throws IOException {
+    if (coprocEnvironments.isEmpty()) return store.getScanInfo();
+    CustomizedScanInfoBuilder builder = new CustomizedScanInfoBuilder(store.getScanInfo(), scan);
+    execOperation(new RegionObserverOperationWithoutResult() {
+      @Override
+      public void call(RegionObserver observer) throws IOException {
+        observer.preStoreScannerOpen(this, store, builder);
+      }
+    });
+    return builder.build();
+  }
+
+  /**
    * @param info the RegionInfo for this region
    * @param edits the file of recovered edits
-   * @throws IOException Exception
    */
   public void preReplayWALs(final RegionInfo info, final Path edits) throws IOException {
-    execOperation(coprocEnvironments.isEmpty() ? null : new RegionObserverOperation() {
+    execOperation(coprocEnvironments.isEmpty()? null:
+        new RegionObserverOperationWithoutResult(true) {
       @Override
       public void call(RegionObserver observer) throws IOException {
         observer.preReplayWALs(this, info, edits);
@@ -1298,7 +1416,8 @@ public class RegionCoprocessorHost
    * @throws IOException Exception
    */
   public void postReplayWALs(final RegionInfo info, final Path edits) throws IOException {
-    execOperation(coprocEnvironments.isEmpty() ? null : new RegionObserverOperation() {
+    execOperation(coprocEnvironments.isEmpty()? null:
+        new RegionObserverOperationWithoutResult() {
       @Override
       public void call(RegionObserver observer) throws IOException {
         observer.postReplayWALs(this, info, edits);
@@ -1307,15 +1426,16 @@ public class RegionCoprocessorHost
   }
 
   /**
-   * @param info
-   * @param logKey
-   * @param logEdit
+   * Supports Coprocessor 'bypass'.
    * @return true if default behavior should be bypassed, false otherwise
-   * @throws IOException
+   * @deprecated Since hbase-2.0.0. No replacement. To be removed in hbase-3.0.0 and replaced
+   * with something that doesn't expose IntefaceAudience.Private classes.
    */
-  public boolean preWALRestore(final RegionInfo info, final WALKey logKey,
-      final WALEdit logEdit) throws IOException {
-    return execOperation(coprocEnvironments.isEmpty() ? null : new RegionObserverOperation() {
+  @Deprecated
+  public boolean preWALRestore(final RegionInfo info, final WALKey logKey, final WALEdit logEdit)
+      throws IOException {
+    return execOperation(coprocEnvironments.isEmpty()? null:
+        new RegionObserverOperationWithoutResult(true) {
       @Override
       public void call(RegionObserver observer) throws IOException {
         observer.preWALRestore(this, info, logKey, logEdit);
@@ -1324,14 +1444,14 @@ public class RegionCoprocessorHost
   }
 
   /**
-   * @param info
-   * @param logKey
-   * @param logEdit
-   * @throws IOException
+   * @deprecated Since hbase-2.0.0. No replacement. To be removed in hbase-3.0.0 and replaced
+   * with something that doesn't expose IntefaceAudience.Private classes.
    */
+  @Deprecated
   public void postWALRestore(final RegionInfo info, final WALKey logKey, final WALEdit logEdit)
       throws IOException {
-    execOperation(coprocEnvironments.isEmpty() ? null : new RegionObserverOperation() {
+    execOperation(coprocEnvironments.isEmpty()? null:
+        new RegionObserverOperationWithoutResult() {
       @Override
       public void call(RegionObserver observer) throws IOException {
         observer.postWALRestore(this, info, logKey, logEdit);
@@ -1341,11 +1461,9 @@ public class RegionCoprocessorHost
 
   /**
    * @param familyPaths pairs of { CF, file path } submitted for bulk load
-   * @return true if the default operation should be bypassed
-   * @throws IOException
    */
-  public boolean preBulkLoadHFile(final List<Pair<byte[], String>> familyPaths) throws IOException {
-    return execOperation(coprocEnvironments.isEmpty() ? null : new RegionObserverOperation() {
+  public void preBulkLoadHFile(final List<Pair<byte[], String>> familyPaths) throws IOException {
+    execOperation(coprocEnvironments.isEmpty()? null: new RegionObserverOperationWithoutResult() {
       @Override
       public void call(RegionObserver observer) throws IOException {
         observer.preBulkLoadHFile(this, familyPaths);
@@ -1355,15 +1473,18 @@ public class RegionCoprocessorHost
 
   public boolean preCommitStoreFile(final byte[] family, final List<Pair<Path, Path>> pairs)
       throws IOException {
-    return execOperation(coprocEnvironments.isEmpty() ? null : new RegionObserverOperation() {
+    return execOperation(coprocEnvironments.isEmpty()? null:
+        new RegionObserverOperationWithoutResult() {
       @Override
       public void call(RegionObserver observer) throws IOException {
         observer.preCommitStoreFile(this, family, pairs);
       }
     });
   }
+
   public void postCommitStoreFile(final byte[] family, Path srcPath, Path dstPath) throws IOException {
-    execOperation(coprocEnvironments.isEmpty() ? null : new RegionObserverOperation() {
+    execOperation(coprocEnvironments.isEmpty()? null:
+        new RegionObserverOperationWithoutResult() {
       @Override
       public void call(RegionObserver observer) throws IOException {
         observer.postCommitStoreFile(this, family, srcPath, dstPath);
@@ -1374,23 +1495,25 @@ public class RegionCoprocessorHost
   /**
    * @param familyPaths pairs of { CF, file path } submitted for bulk load
    * @param map Map of CF to List of file paths for the final loaded files
-   * @param hasLoaded whether load was successful or not
-   * @return the possibly modified value of hasLoaded
    * @throws IOException
    */
-  public boolean postBulkLoadHFile(final List<Pair<byte[], String>> familyPaths,
-      Map<byte[], List<Path>> map, boolean hasLoaded) throws IOException {
-    return execOperationWithResult(hasLoaded, coprocEnvironments.isEmpty() ? null :
-        new ObserverOperationWithResult<RegionObserver, Boolean>(regionObserverGetter) {
+  public void postBulkLoadHFile(final List<Pair<byte[], String>> familyPaths,
+      Map<byte[], List<Path>> map) throws IOException {
+    if (this.coprocEnvironments.isEmpty()) {
+      return;
+    }
+    execOperation(coprocEnvironments.isEmpty()? null:
+        new RegionObserverOperationWithoutResult() {
           @Override
-          public Boolean call(RegionObserver observer) throws IOException {
-            return observer.postBulkLoadHFile(this, familyPaths, map, getResult());
+          public void call(RegionObserver observer) throws IOException {
+            observer.postBulkLoadHFile(this, familyPaths, map);
           }
         });
   }
 
   public void postStartRegionOperation(final Operation op) throws IOException {
-    execOperation(coprocEnvironments.isEmpty() ? null : new RegionObserverOperation() {
+    execOperation(coprocEnvironments.isEmpty()? null:
+        new RegionObserverOperationWithoutResult() {
       @Override
       public void call(RegionObserver observer) throws IOException {
         observer.postStartRegionOperation(this, op);
@@ -1399,7 +1522,8 @@ public class RegionCoprocessorHost
   }
 
   public void postCloseRegionOperation(final Operation op) throws IOException {
-    execOperation(coprocEnvironments.isEmpty() ? null : new RegionObserverOperation() {
+    execOperation(coprocEnvironments.isEmpty()? null:
+        new RegionObserverOperationWithoutResult() {
       @Override
       public void call(RegionObserver observer) throws IOException {
         observer.postCloseRegionOperation(this, op);
@@ -1421,8 +1545,11 @@ public class RegionCoprocessorHost
   public StoreFileReader preStoreFileReaderOpen(final FileSystem fs, final Path p,
       final FSDataInputStreamWrapper in, final long size, final CacheConfig cacheConf,
       final Reference r) throws IOException {
-    return execOperationWithResult(null, coprocEnvironments.isEmpty() ? null :
-        new ObserverOperationWithResult<RegionObserver, StoreFileReader>(regionObserverGetter) {
+    if (coprocEnvironments.isEmpty()) {
+      return null;
+    }
+    return execOperationWithResult(
+        new ObserverOperationWithResult<RegionObserver, StoreFileReader>(regionObserverGetter, null) {
           @Override
           public StoreFileReader call(RegionObserver observer) throws IOException {
             return observer.preStoreFileReaderOpen(this, fs, p, in, size, cacheConf, r,
@@ -1445,8 +1572,11 @@ public class RegionCoprocessorHost
   public StoreFileReader postStoreFileReaderOpen(final FileSystem fs, final Path p,
       final FSDataInputStreamWrapper in, final long size, final CacheConfig cacheConf,
       final Reference r, final StoreFileReader reader) throws IOException {
-    return execOperationWithResult(reader, coprocEnvironments.isEmpty() ? null :
-        new ObserverOperationWithResult<RegionObserver, StoreFileReader>(regionObserverGetter) {
+    if (this.coprocEnvironments.isEmpty()) {
+      return reader;
+    }
+    return execOperationWithResult(
+        new ObserverOperationWithResult<RegionObserver, StoreFileReader>(regionObserverGetter, reader) {
           @Override
           public StoreFileReader call(RegionObserver observer) throws IOException {
             return observer.postStoreFileReaderOpen(this, fs, p, in, size, cacheConf, r,
@@ -1455,26 +1585,60 @@ public class RegionCoprocessorHost
         });
   }
 
-  public Cell postMutationBeforeWAL(final MutationType opType, final Mutation mutation,
-      final Cell oldCell, Cell newCell) throws IOException {
-    return execOperationWithResult(newCell, coprocEnvironments.isEmpty() ? null :
-        new ObserverOperationWithResult<RegionObserver, Cell>(regionObserverGetter) {
+  public List<Pair<Cell, Cell>> postIncrementBeforeWAL(final Mutation mutation,
+      final List<Pair<Cell, Cell>> cellPairs) throws IOException {
+    if (this.coprocEnvironments.isEmpty()) {
+      return cellPairs;
+    }
+    return execOperationWithResult(
+        new ObserverOperationWithResult<RegionObserver, List<Pair<Cell, Cell>>>(
+            regionObserverGetter, cellPairs) {
           @Override
-          public Cell call(RegionObserver observer) throws IOException {
-            return observer.postMutationBeforeWAL(this, opType, mutation, oldCell, getResult());
+          public List<Pair<Cell, Cell>> call(RegionObserver observer) throws IOException {
+            return observer.postIncrementBeforeWAL(this, mutation, getResult());
           }
         });
   }
 
-  public Message preEndpointInvocation(final Service service, final String methodName,
-      Message request) throws IOException {
-    return execOperationWithResult(request, coprocEnvironments.isEmpty() ? null :
-        new ObserverOperationWithResult<EndpointObserver, Message>(endpointObserverGetter) {
+  public List<Pair<Cell, Cell>> postAppendBeforeWAL(final Mutation mutation,
+      final List<Pair<Cell, Cell>> cellPairs) throws IOException {
+    if (this.coprocEnvironments.isEmpty()) {
+      return cellPairs;
+    }
+    return execOperationWithResult(
+        new ObserverOperationWithResult<RegionObserver, List<Pair<Cell, Cell>>>(
+            regionObserverGetter, cellPairs) {
           @Override
-          public Message call(EndpointObserver observer) throws IOException {
-            return observer.preEndpointInvocation(this, service, methodName, getResult());
+          public List<Pair<Cell, Cell>> call(RegionObserver observer) throws IOException {
+            return observer.postAppendBeforeWAL(this, mutation, getResult());
           }
         });
+  }
+
+  public void preWALAppend(WALKey key, WALEdit edit) throws IOException {
+    if (this.coprocEnvironments.isEmpty()){
+      return;
+    }
+    execOperation(new RegionObserverOperationWithoutResult() {
+      @Override
+      public void call(RegionObserver observer) throws IOException {
+        observer.preWALAppend(this, key, edit);
+      }
+    });
+  }
+
+  public Message preEndpointInvocation(final Service service, final String methodName,
+      Message request) throws IOException {
+    if (coprocEnvironments.isEmpty()) {
+      return request;
+    }
+    return execOperationWithResult(new ObserverOperationWithResult<EndpointObserver,
+        Message>(endpointObserverGetter, request) {
+      @Override
+      public Message call(EndpointObserver observer) throws IOException {
+        return observer.preEndpointInvocation(this, service, methodName, getResult());
+      }
+    });
   }
 
   public void postEndpointInvocation(final Service service, final String methodName,
@@ -1488,14 +1652,21 @@ public class RegionCoprocessorHost
         });
   }
 
-  public DeleteTracker postInstantiateDeleteTracker(DeleteTracker tracker) throws IOException {
-    return execOperationWithResult(tracker, coprocEnvironments.isEmpty() ? null :
-        new ObserverOperationWithResult<RegionObserver, DeleteTracker>(regionObserverGetter) {
-          @Override
-          public DeleteTracker call(RegionObserver observer) throws IOException {
-            return observer.postInstantiateDeleteTracker(this, getResult());
-          }
-        });
+  /**
+   * @deprecated Since 2.0 with out any replacement and will be removed in 3.0
+   */
+  @Deprecated
+  public DeleteTracker postInstantiateDeleteTracker(DeleteTracker result) throws IOException {
+    if (this.coprocEnvironments.isEmpty()) {
+      return result;
+    }
+    return execOperationWithResult(new ObserverOperationWithResult<RegionObserver, DeleteTracker>(
+        regionObserverGetter, result) {
+      @Override
+      public DeleteTracker call(RegionObserver observer) throws IOException {
+        return observer.postInstantiateDeleteTracker(this, getResult());
+      }
+    });
   }
 
   /////////////////////////////////////////////////////////////////////////////////////////////////
