@@ -23,19 +23,23 @@ import static org.apache.hadoop.hbase.wal.AbstractFSWALProvider.WAL_FILE_NAME_DE
 
 import java.io.IOException;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ConcurrentMap;
+import java.util.concurrent.locks.Lock;
+import java.util.stream.Collectors;
 
-import org.apache.commons.logging.Log;
-import org.apache.commons.logging.LogFactory;
 import org.apache.hadoop.conf.Configuration;
-import org.apache.yetus.audience.InterfaceAudience;
+import org.apache.hadoop.hbase.Abortable;
+import org.apache.hadoop.hbase.HConstants;
+import org.apache.hadoop.hbase.client.RegionInfo;
 // imports for classes still in regionserver.wal
 import org.apache.hadoop.hbase.regionserver.wal.WALActionsListener;
 import org.apache.hadoop.hbase.util.Bytes;
-import org.apache.hadoop.hbase.util.IdLock;
+import org.apache.hadoop.hbase.util.KeyLocker;
+import org.apache.yetus.audience.InterfaceAudience;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 /**
  * A WAL Provider that returns a WAL per group of regions.
@@ -55,7 +59,7 @@ import org.apache.hadoop.hbase.util.IdLock;
  */
 @InterfaceAudience.Private
 public class RegionGroupingProvider implements WALProvider {
-  private static final Log LOG = LogFactory.getLog(RegionGroupingProvider.class);
+  private static final Logger LOG = LoggerFactory.getLogger(RegionGroupingProvider.class);
 
   /**
    * Map identifiers to a group number.
@@ -102,26 +106,21 @@ public class RegionGroupingProvider implements WALProvider {
     }
     LOG.info("Instantiating RegionGroupingStrategy of type " + clazz);
     try {
-      final RegionGroupingStrategy result = clazz.newInstance();
+      final RegionGroupingStrategy result = clazz.getDeclaredConstructor().newInstance();
       result.init(conf, providerId);
       return result;
-    } catch (InstantiationException exception) {
+    } catch (Exception e) {
       LOG.error("couldn't set up region grouping strategy, check config key " +
           REGION_GROUPING_STRATEGY);
-      LOG.debug("Exception details for failure to load region grouping strategy.", exception);
-      throw new IOException("couldn't set up region grouping strategy", exception);
-    } catch (IllegalAccessException exception) {
-      LOG.error("couldn't set up region grouping strategy, check config key " +
-          REGION_GROUPING_STRATEGY);
-      LOG.debug("Exception details for failure to load region grouping strategy.", exception);
-      throw new IOException("couldn't set up region grouping strategy", exception);
+      LOG.debug("Exception details for failure to load region grouping strategy.", e);
+      throw new IOException("couldn't set up region grouping strategy", e);
     }
   }
 
   public static final String REGION_GROUPING_STRATEGY = "hbase.wal.regiongrouping.strategy";
   public static final String DEFAULT_REGION_GROUPING_STRATEGY = Strategies.defaultStrategy.name();
 
-  /** delegate provider for WAL creation/roll/close */
+  /** delegate provider for WAL creation/roll/close, but not support multiwal */
   public static final String DELEGATE_PROVIDER = "hbase.wal.regiongrouping.delegate.provider";
   public static final String DEFAULT_DELEGATE_PROVIDER = WALFactory.Providers.defaultProvider
       .name();
@@ -131,79 +130,91 @@ public class RegionGroupingProvider implements WALProvider {
   /** A group-provider mapping, make sure one-one rather than many-one mapping */
   private final ConcurrentMap<String, WALProvider> cached = new ConcurrentHashMap<>();
 
-  private final IdLock createLock = new IdLock();
+  private final KeyLocker<String> createLock = new KeyLocker<>();
 
-  private RegionGroupingStrategy strategy = null;
-  private WALFactory factory = null;
-  private List<WALActionsListener> listeners = null;
-  private String providerId = null;
+  private RegionGroupingStrategy strategy;
+  private WALFactory factory;
+  private List<WALActionsListener> listeners = new ArrayList<>();
+  private String providerId;
   private Class<? extends WALProvider> providerClass;
 
   @Override
-  public void init(final WALFactory factory, final Configuration conf,
-      final List<WALActionsListener> listeners, final String providerId) throws IOException {
+  public void init(WALFactory factory, Configuration conf, String providerId, Abortable abortable)
+      throws IOException {
     if (null != strategy) {
       throw new IllegalStateException("WALProvider.init should only be called once.");
     }
     this.factory = factory;
-    this.listeners = null == listeners ? null : Collections.unmodifiableList(listeners);
-    StringBuilder sb = new StringBuilder().append(factory.factoryId);
-    if (providerId != null) {
-      if (providerId.startsWith(WAL_FILE_NAME_DELIMITER)) {
-        sb.append(providerId);
-      } else {
-        sb.append(WAL_FILE_NAME_DELIMITER).append(providerId);
+
+    if (META_WAL_PROVIDER_ID.equals(providerId)) {
+      // do not change the provider id if it is for meta
+      this.providerId = providerId;
+    } else {
+      StringBuilder sb = new StringBuilder().append(factory.factoryId);
+      if (providerId != null) {
+        if (providerId.startsWith(WAL_FILE_NAME_DELIMITER)) {
+          sb.append(providerId);
+        } else {
+          sb.append(WAL_FILE_NAME_DELIMITER).append(providerId);
+        }
       }
+      this.providerId = sb.toString();
     }
-    this.providerId = sb.toString();
     this.strategy = getStrategy(conf, REGION_GROUPING_STRATEGY, DEFAULT_REGION_GROUPING_STRATEGY);
     this.providerClass = factory.getProviderClass(DELEGATE_PROVIDER, DEFAULT_DELEGATE_PROVIDER);
+    if (providerClass.equals(this.getClass())) {
+      LOG.warn("delegate provider not support multiwal, falling back to defaultProvider.");
+      providerClass = factory.getDefaultProvider().clazz;
+    }
   }
 
   private WALProvider createProvider(String group) throws IOException {
     if (META_WAL_PROVIDER_ID.equals(providerId)) {
-      return factory.createProvider(providerClass, listeners, META_WAL_PROVIDER_ID);
+      return factory.createProvider(providerClass, META_WAL_PROVIDER_ID);
     } else {
-      return factory.createProvider(providerClass, listeners, group);
+      return factory.createProvider(providerClass, group);
     }
   }
 
   @Override
   public List<WAL> getWALs() {
-    List<WAL> wals = new ArrayList<>();
-    for (WALProvider provider : cached.values()) {
-      wals.addAll(provider.getWALs());
-    }
-    return wals;
+    return cached.values().stream().flatMap(p -> p.getWALs().stream()).collect(Collectors.toList());
   }
 
-  private WAL getWAL(final String group) throws IOException {
+  private WAL getWAL(String group) throws IOException {
     WALProvider provider = cached.get(group);
     if (provider == null) {
-      IdLock.Entry lockEntry = null;
+      Lock lock = createLock.acquireLock(group);
       try {
-        lockEntry = createLock.getLockEntry(group.hashCode());
         provider = cached.get(group);
         if (provider == null) {
           provider = createProvider(group);
+          listeners.forEach(provider::addWALActionsListener);
           cached.put(group, provider);
         }
       } finally {
-        if (lockEntry != null) {
-          createLock.releaseLockEntry(lockEntry);
-        }
+        lock.unlock();
       }
     }
-    return provider.getWAL(null, null);
+    return provider.getWAL(null);
   }
 
   @Override
-  public WAL getWAL(final byte[] identifier, byte[] namespace) throws IOException {
-    final String group;
+  public WAL getWAL(RegionInfo region) throws IOException {
+    String group;
     if (META_WAL_PROVIDER_ID.equals(this.providerId)) {
       group = META_WAL_GROUP_NAME;
     } else {
-      group = strategy.group(identifier, namespace);
+      byte[] id;
+      byte[] namespace;
+      if (region != null) {
+        id = region.getEncodedNameAsBytes();
+        namespace = region.getTable().getNamespace();
+      } else {
+        id = HConstants.EMPTY_BYTE_ARRAY;
+        namespace = null;
+      }
+      group = strategy.group(id, namespace);
     }
     return getWAL(group);
   }
@@ -273,5 +284,15 @@ public class RegionGroupingProvider implements WALProvider {
       logFileSize += provider.getLogFileSize();
     }
     return logFileSize;
+  }
+
+  @Override
+  public void addWALActionsListener(WALActionsListener listener) {
+    // Notice that there is an assumption that this method must be called before the getWAL above,
+    // so we can make sure there is no sub WALProvider yet, so we only add the listener to our
+    // listeners list without calling addWALActionListener for each WALProvider. Although it is no
+    // hurt to execute an extra loop to call addWALActionListener for each WALProvider, but if the
+    // extra code actually works, then we will have other big problems. So leave it as is.
+    listeners.add(listener);
   }
 }
