@@ -1,5 +1,4 @@
 /**
- *
  * Licensed to the Apache Software Foundation (ASF) under one
  * or more contributor license agreements.  See the NOTICE file
  * distributed with this work for additional information
@@ -18,18 +17,22 @@
  */
 package org.apache.hadoop.hbase.filter;
 
-import static org.junit.Assert.*;
-
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertFalse;
+import static org.junit.Assert.assertTrue;
 import java.io.IOException;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.List;
-
+import java.util.regex.Pattern;
 import org.apache.hadoop.hbase.CompareOperator;
+import org.apache.hadoop.hbase.HBaseClassTestRule;
+import org.apache.hadoop.hbase.testclassification.MediumTests;
 import org.apache.hadoop.hbase.testclassification.RegionServerTests;
-import org.apache.hadoop.hbase.testclassification.SmallTests;
 import org.apache.hadoop.hbase.util.Bytes;
 import org.junit.After;
 import org.junit.Before;
+import org.junit.ClassRule;
 import org.junit.Test;
 import org.junit.experimental.categories.Category;
 
@@ -38,8 +41,12 @@ import org.junit.experimental.categories.Category;
  * It tests the entire work flow from when a string is given by the user
  * and how it is parsed to construct the corresponding Filter object
  */
-@Category({RegionServerTests.class, SmallTests.class})
+@Category({RegionServerTests.class, MediumTests.class})
 public class TestParseFilter {
+
+  @ClassRule
+  public static final HBaseClassTestRule CLASS_RULE =
+      HBaseClassTestRule.forClass(TestParseFilter.class);
 
   ParseFilter f;
   Filter filter;
@@ -89,7 +96,7 @@ public class TestParseFilter {
     String filterString = " PrefixFilter('row' ) ";
     PrefixFilter prefixFilter = doTestFilter(filterString, PrefixFilter.class);
     byte [] prefix = prefixFilter.getPrefix();
-    assertEquals(new String(prefix), "row");
+    assertEquals("row", new String(prefix, StandardCharsets.UTF_8));
 
 
     filterString = " PrefixFilter(row)";
@@ -107,7 +114,7 @@ public class TestParseFilter {
     ColumnPrefixFilter columnPrefixFilter =
       doTestFilter(filterString, ColumnPrefixFilter.class);
     byte [] columnPrefix = columnPrefixFilter.getPrefix();
-    assertEquals(new String(columnPrefix), "qualifier");
+    assertEquals("qualifier", new String(columnPrefix, StandardCharsets.UTF_8));
   }
 
   @Test
@@ -116,8 +123,8 @@ public class TestParseFilter {
     MultipleColumnPrefixFilter multipleColumnPrefixFilter =
       doTestFilter(filterString, MultipleColumnPrefixFilter.class);
     byte [][] prefixes = multipleColumnPrefixFilter.getPrefix();
-    assertEquals(new String(prefixes[0]), "qualifier1");
-    assertEquals(new String(prefixes[1]), "qualifier2");
+    assertEquals("qualifier1", new String(prefixes[0], StandardCharsets.UTF_8));
+    assertEquals("qualifier2", new String(prefixes[1], StandardCharsets.UTF_8));
   }
 
   @Test
@@ -126,7 +133,7 @@ public class TestParseFilter {
     ColumnCountGetFilter columnCountGetFilter =
       doTestFilter(filterString, ColumnCountGetFilter.class);
     int limit = columnCountGetFilter.getLimit();
-    assertEquals(limit, 4);
+    assertEquals(4, limit);
 
     filterString = " ColumnCountGetFilter('abc')";
     try {
@@ -151,7 +158,7 @@ public class TestParseFilter {
     PageFilter pageFilter =
       doTestFilter(filterString, PageFilter.class);
     long pageSize = pageFilter.getPageSize();
-    assertEquals(pageSize, 4);
+    assertEquals(4, pageSize);
 
     filterString = " PageFilter('123')";
     try {
@@ -168,9 +175,9 @@ public class TestParseFilter {
     ColumnPaginationFilter columnPaginationFilter =
       doTestFilter(filterString, ColumnPaginationFilter.class);
     int limit = columnPaginationFilter.getLimit();
-    assertEquals(limit, 4);
+    assertEquals(4, limit);
     int offset = columnPaginationFilter.getOffset();
-    assertEquals(offset, 6);
+    assertEquals(6, offset);
 
     filterString = " ColumnPaginationFilter('124')";
     try {
@@ -203,7 +210,7 @@ public class TestParseFilter {
     InclusiveStopFilter inclusiveStopFilter =
       doTestFilter(filterString, InclusiveStopFilter.class);
     byte [] stopRowKey = inclusiveStopFilter.getStopRowKey();
-    assertEquals(new String(stopRowKey), "row 3");
+    assertEquals("row 3", new String(stopRowKey, StandardCharsets.UTF_8));
   }
 
 
@@ -213,13 +220,13 @@ public class TestParseFilter {
     TimestampsFilter timestampsFilter =
       doTestFilter(filterString, TimestampsFilter.class);
     List<Long> timestamps = timestampsFilter.getTimestamps();
-    assertEquals(timestamps.size(), 2);
-    assertEquals(timestamps.get(0), new Long(6));
+    assertEquals(2, timestamps.size());
+    assertEquals(Long.valueOf(6), timestamps.get(0));
 
     filterString = "TimestampsFilter()";
     timestampsFilter = doTestFilter(filterString, TimestampsFilter.class);
     timestamps = timestampsFilter.getTimestamps();
-    assertEquals(timestamps.size(), 0);
+    assertEquals(0, timestamps.size());
 
     filterString = "TimestampsFilter(9223372036854775808, 6)";
     try {
@@ -246,7 +253,7 @@ public class TestParseFilter {
     assertEquals(CompareOperator.EQUAL, rowFilter.getCompareOperator());
     assertTrue(rowFilter.getComparator() instanceof BinaryComparator);
     BinaryComparator binaryComparator = (BinaryComparator) rowFilter.getComparator();
-    assertEquals("regionse", new String(binaryComparator.getValue()));
+    assertEquals("regionse", new String(binaryComparator.getValue(), StandardCharsets.UTF_8));
   }
 
   @Test
@@ -258,7 +265,7 @@ public class TestParseFilter {
     assertTrue(familyFilter.getComparator() instanceof BinaryPrefixComparator);
     BinaryPrefixComparator binaryPrefixComparator =
       (BinaryPrefixComparator) familyFilter.getComparator();
-    assertEquals("pre", new String(binaryPrefixComparator.getValue()));
+    assertEquals("pre", new String(binaryPrefixComparator.getValue(), StandardCharsets.UTF_8));
   }
 
   @Test
@@ -270,7 +277,21 @@ public class TestParseFilter {
     assertTrue(qualifierFilter.getComparator() instanceof RegexStringComparator);
     RegexStringComparator regexStringComparator =
       (RegexStringComparator) qualifierFilter.getComparator();
-    assertEquals("pre*", new String(regexStringComparator.getValue()));
+    assertEquals("pre*", new String(regexStringComparator.getValue(), StandardCharsets.UTF_8));
+  }
+
+  @Test
+  public void testQualifierFilterNoCase() throws IOException {
+    String filterString = "QualifierFilter(=, 'regexstringnocase:pre*')";
+    QualifierFilter qualifierFilter =
+      doTestFilter(filterString, QualifierFilter.class);
+    assertEquals(CompareOperator.EQUAL, qualifierFilter.getCompareOperator());
+    assertTrue(qualifierFilter.getComparator() instanceof RegexStringComparator);
+    RegexStringComparator regexStringComparator =
+      (RegexStringComparator) qualifierFilter.getComparator();
+    assertEquals("pre*", new String(regexStringComparator.getValue(), StandardCharsets.UTF_8));
+    int regexComparatorFlags = regexStringComparator.getEngine().getFlags();
+    assertEquals(Pattern.CASE_INSENSITIVE | Pattern.DOTALL, regexComparatorFlags);
   }
 
   @Test
@@ -282,7 +303,7 @@ public class TestParseFilter {
     assertTrue(valueFilter.getComparator() instanceof SubstringComparator);
     SubstringComparator substringComparator =
       (SubstringComparator) valueFilter.getComparator();
-    assertEquals("pre", new String(substringComparator.getValue()));
+    assertEquals("pre", new String(substringComparator.getValue(), StandardCharsets.UTF_8));
   }
 
   @Test
@@ -290,8 +311,8 @@ public class TestParseFilter {
     String filterString = "ColumnRangeFilter('abc', true, 'xyz', false)";
     ColumnRangeFilter columnRangeFilter =
       doTestFilter(filterString, ColumnRangeFilter.class);
-    assertEquals("abc", new String(columnRangeFilter.getMinColumn()));
-    assertEquals("xyz", new String(columnRangeFilter.getMaxColumn()));
+    assertEquals("abc", new String(columnRangeFilter.getMinColumn(), StandardCharsets.UTF_8));
+    assertEquals("xyz", new String(columnRangeFilter.getMaxColumn(), StandardCharsets.UTF_8));
     assertTrue(columnRangeFilter.isMinColumnInclusive());
     assertFalse(columnRangeFilter.isMaxColumnInclusive());
   }
@@ -301,13 +322,14 @@ public class TestParseFilter {
     String filterString = "DependentColumnFilter('family', 'qualifier', true, =, 'binary:abc')";
     DependentColumnFilter dependentColumnFilter =
       doTestFilter(filterString, DependentColumnFilter.class);
-    assertEquals("family", new String(dependentColumnFilter.getFamily()));
-    assertEquals("qualifier", new String(dependentColumnFilter.getQualifier()));
+    assertEquals("family", new String(dependentColumnFilter.getFamily(), StandardCharsets.UTF_8));
+    assertEquals("qualifier",
+        new String(dependentColumnFilter.getQualifier(), StandardCharsets.UTF_8));
     assertTrue(dependentColumnFilter.getDropDependentColumn());
     assertEquals(CompareOperator.EQUAL, dependentColumnFilter.getCompareOperator());
     assertTrue(dependentColumnFilter.getComparator() instanceof BinaryComparator);
     BinaryComparator binaryComparator = (BinaryComparator)dependentColumnFilter.getComparator();
-    assertEquals("abc", new String(binaryComparator.getValue()));
+    assertEquals("abc", new String(binaryComparator.getValue(), StandardCharsets.UTF_8));
   }
 
   @Test
@@ -316,25 +338,27 @@ public class TestParseFilter {
       "('family', 'qualifier', >=, 'binary:a', true, false)";
     SingleColumnValueFilter singleColumnValueFilter =
       doTestFilter(filterString, SingleColumnValueFilter.class);
-    assertEquals("family", new String(singleColumnValueFilter.getFamily()));
-    assertEquals("qualifier", new String(singleColumnValueFilter.getQualifier()));
-    assertEquals(singleColumnValueFilter.getCompareOperator(), CompareOperator.GREATER_OR_EQUAL);
+    assertEquals("family", new String(singleColumnValueFilter.getFamily(), StandardCharsets.UTF_8));
+    assertEquals("qualifier",
+        new String(singleColumnValueFilter.getQualifier(), StandardCharsets.UTF_8));
+    assertEquals(CompareOperator.GREATER_OR_EQUAL, singleColumnValueFilter.getCompareOperator());
     assertTrue(singleColumnValueFilter.getComparator() instanceof BinaryComparator);
     BinaryComparator binaryComparator = (BinaryComparator) singleColumnValueFilter.getComparator();
-    assertEquals(new String(binaryComparator.getValue()), "a");
+    assertEquals("a", new String(binaryComparator.getValue(), StandardCharsets.UTF_8));
     assertTrue(singleColumnValueFilter.getFilterIfMissing());
     assertFalse(singleColumnValueFilter.getLatestVersionOnly());
 
 
     filterString = "SingleColumnValueFilter ('family', 'qualifier', >, 'binaryprefix:a')";
     singleColumnValueFilter = doTestFilter(filterString, SingleColumnValueFilter.class);
-    assertEquals("family", new String(singleColumnValueFilter.getFamily()));
-    assertEquals("qualifier", new String(singleColumnValueFilter.getQualifier()));
-    assertEquals(singleColumnValueFilter.getCompareOperator(), CompareOperator.GREATER);
+    assertEquals("family", new String(singleColumnValueFilter.getFamily(), StandardCharsets.UTF_8));
+    assertEquals("qualifier",
+        new String(singleColumnValueFilter.getQualifier(), StandardCharsets.UTF_8));
+    assertEquals(CompareOperator.GREATER, singleColumnValueFilter.getCompareOperator());
     assertTrue(singleColumnValueFilter.getComparator() instanceof BinaryPrefixComparator);
     BinaryPrefixComparator binaryPrefixComparator =
       (BinaryPrefixComparator) singleColumnValueFilter.getComparator();
-    assertEquals(new String(binaryPrefixComparator.getValue()), "a");
+    assertEquals("a", new String(binaryPrefixComparator.getValue(), StandardCharsets.UTF_8));
     assertFalse(singleColumnValueFilter.getFilterIfMissing());
     assertTrue(singleColumnValueFilter.getLatestVersionOnly());
   }
@@ -345,10 +369,13 @@ public class TestParseFilter {
       "SingleColumnValueExcludeFilter ('family', 'qualifier', <, 'binaryprefix:a')";
     SingleColumnValueExcludeFilter singleColumnValueExcludeFilter =
       doTestFilter(filterString, SingleColumnValueExcludeFilter.class);
-    assertEquals(singleColumnValueExcludeFilter.getCompareOperator(), CompareOperator.LESS);
-    assertEquals("family", new String(singleColumnValueExcludeFilter.getFamily()));
-    assertEquals("qualifier", new String(singleColumnValueExcludeFilter.getQualifier()));
-    assertEquals(new String(singleColumnValueExcludeFilter.getComparator().getValue()), "a");
+    assertEquals(CompareOperator.LESS, singleColumnValueExcludeFilter.getCompareOperator());
+    assertEquals("family",
+        new String(singleColumnValueExcludeFilter.getFamily(), StandardCharsets.UTF_8));
+    assertEquals("qualifier",
+        new String(singleColumnValueExcludeFilter.getQualifier(), StandardCharsets.UTF_8));
+    assertEquals("a", new String(singleColumnValueExcludeFilter.getComparator().getValue(),
+        StandardCharsets.UTF_8));
     assertFalse(singleColumnValueExcludeFilter.getFilterIfMissing());
     assertTrue(singleColumnValueExcludeFilter.getLatestVersionOnly());
 
@@ -356,14 +383,16 @@ public class TestParseFilter {
       "('family', 'qualifier', <=, 'binaryprefix:a', true, false)";
     singleColumnValueExcludeFilter =
       doTestFilter(filterString, SingleColumnValueExcludeFilter.class);
-    assertEquals("family", new String(singleColumnValueExcludeFilter.getFamily()));
-    assertEquals("qualifier", new String(singleColumnValueExcludeFilter.getQualifier()));
-    assertEquals(singleColumnValueExcludeFilter.getCompareOperator(),
-      CompareOperator.LESS_OR_EQUAL);
+    assertEquals("family",
+        new String(singleColumnValueExcludeFilter.getFamily(), StandardCharsets.UTF_8));
+    assertEquals("qualifier",
+        new String(singleColumnValueExcludeFilter.getQualifier(), StandardCharsets.UTF_8));
+    assertEquals(CompareOperator.LESS_OR_EQUAL,
+        singleColumnValueExcludeFilter.getCompareOperator());
     assertTrue(singleColumnValueExcludeFilter.getComparator() instanceof BinaryPrefixComparator);
     BinaryPrefixComparator binaryPrefixComparator =
       (BinaryPrefixComparator) singleColumnValueExcludeFilter.getComparator();
-    assertEquals(new String(binaryPrefixComparator.getValue()), "a");
+    assertEquals("a", new String(binaryPrefixComparator.getValue(), StandardCharsets.UTF_8));
     assertTrue(singleColumnValueExcludeFilter.getFilterIfMissing());
     assertFalse(singleColumnValueExcludeFilter.getLatestVersionOnly());
   }
@@ -379,7 +408,7 @@ public class TestParseFilter {
     assertEquals(CompareOperator.EQUAL, valueFilter.getCompareOperator());
     assertTrue(valueFilter.getComparator() instanceof BinaryComparator);
     BinaryComparator binaryComparator = (BinaryComparator) valueFilter.getComparator();
-    assertEquals("0", new String(binaryComparator.getValue()));
+    assertEquals("0", new String(binaryComparator.getValue(), StandardCharsets.UTF_8));
   }
 
   @Test
@@ -393,7 +422,7 @@ public class TestParseFilter {
     assertEquals(CompareOperator.NOT_EQUAL, rowFilter.getCompareOperator());
     assertTrue(rowFilter.getComparator() instanceof BinaryComparator);
     BinaryComparator binaryComparator = (BinaryComparator) rowFilter.getComparator();
-    assertEquals("row1", new String(binaryComparator.getValue()));
+    assertEquals("row1", new String(binaryComparator.getValue(), StandardCharsets.UTF_8));
   }
 
   @Test
@@ -407,7 +436,7 @@ public class TestParseFilter {
     assertTrue(filters.get(1) instanceof FirstKeyOnlyFilter);
     PrefixFilter PrefixFilter = (PrefixFilter) filters.get(0);
     byte [] prefix = PrefixFilter.getPrefix();
-    assertEquals(new String(prefix), "realtime");
+    assertEquals("realtime", new String(prefix, StandardCharsets.UTF_8));
     FirstKeyOnlyFilter firstKeyOnlyFilter = (FirstKeyOnlyFilter) filters.get(1);
   }
 
@@ -420,7 +449,7 @@ public class TestParseFilter {
     ArrayList<Filter> filterListFilters = (ArrayList<Filter>) filterList.getFilters();
     assertTrue(filterListFilters.get(0) instanceof FilterList);
     assertTrue(filterListFilters.get(1) instanceof FamilyFilter);
-    assertEquals(filterList.getOperator(), FilterList.Operator.MUST_PASS_ONE);
+    assertEquals(FilterList.Operator.MUST_PASS_ONE, filterList.getOperator());
 
     filterList = (FilterList) filterListFilters.get(0);
     FamilyFilter familyFilter = (FamilyFilter) filterListFilters.get(1);
@@ -428,22 +457,22 @@ public class TestParseFilter {
     filterListFilters = (ArrayList<Filter>)filterList.getFilters();
     assertTrue(filterListFilters.get(0) instanceof PrefixFilter);
     assertTrue(filterListFilters.get(1) instanceof QualifierFilter);
-    assertEquals(filterList.getOperator(), FilterList.Operator.MUST_PASS_ALL);
+    assertEquals(FilterList.Operator.MUST_PASS_ALL, filterList.getOperator());
 
     assertEquals(CompareOperator.EQUAL, familyFilter.getCompareOperator());
     assertTrue(familyFilter.getComparator() instanceof BinaryComparator);
     BinaryComparator binaryComparator = (BinaryComparator) familyFilter.getComparator();
-    assertEquals("qualifier", new String(binaryComparator.getValue()));
+    assertEquals("qualifier", new String(binaryComparator.getValue(), StandardCharsets.UTF_8));
 
     PrefixFilter prefixFilter = (PrefixFilter) filterListFilters.get(0);
     byte [] prefix = prefixFilter.getPrefix();
-    assertEquals(new String(prefix), "realtime");
+    assertEquals("realtime", new String(prefix, StandardCharsets.UTF_8));
 
     QualifierFilter qualifierFilter = (QualifierFilter) filterListFilters.get(1);
     assertEquals(CompareOperator.GREATER_OR_EQUAL, qualifierFilter.getCompareOperator());
     assertTrue(qualifierFilter.getComparator() instanceof BinaryComparator);
     binaryComparator = (BinaryComparator) qualifierFilter.getComparator();
-    assertEquals("e", new String(binaryComparator.getValue()));
+    assertEquals("e", new String(binaryComparator.getValue(), StandardCharsets.UTF_8));
   }
 
   @Test
@@ -466,7 +495,7 @@ public class TestParseFilter {
 
     ColumnPrefixFilter columnPrefixFilter = (ColumnPrefixFilter) filters.get(0);
     byte [] columnPrefix = columnPrefixFilter.getPrefix();
-    assertEquals(new String(columnPrefix), "realtime");
+    assertEquals("realtime", new String(columnPrefix, StandardCharsets.UTF_8));
 
     FirstKeyOnlyFilter firstKeyOnlyFilter = (FirstKeyOnlyFilter) filters.get(1);
 
@@ -477,7 +506,7 @@ public class TestParseFilter {
     assertTrue(familyFilter.getComparator() instanceof SubstringComparator);
     SubstringComparator substringComparator =
       (SubstringComparator) familyFilter.getComparator();
-    assertEquals("hihi", new String(substringComparator.getValue()));
+    assertEquals("hihi", new String(substringComparator.getValue(), StandardCharsets.UTF_8));
   }
 
   @Test
@@ -497,7 +526,7 @@ public class TestParseFilter {
     SkipFilter skipFilter = (SkipFilter) filters.get(2);
 
     byte [] columnPrefix = columnPrefixFilter.getPrefix();
-    assertEquals(new String(columnPrefix), "realtime");
+    assertEquals("realtime", new String(columnPrefix, StandardCharsets.UTF_8));
 
     assertTrue(skipFilter.getFilter() instanceof FamilyFilter);
     FamilyFilter familyFilter = (FamilyFilter) skipFilter.getFilter();
@@ -506,7 +535,7 @@ public class TestParseFilter {
     assertTrue(familyFilter.getComparator() instanceof SubstringComparator);
     SubstringComparator substringComparator =
       (SubstringComparator) familyFilter.getComparator();
-    assertEquals("hihi", new String(substringComparator.getValue()));
+    assertEquals("hihi", new String(substringComparator.getValue(), StandardCharsets.UTF_8));
   }
 
   @Test
@@ -537,7 +566,7 @@ public class TestParseFilter {
   }
 
   @Test
-  public void testIncorrectComparatorType () throws IOException {
+  public void testIncorrectComparatorType() throws IOException {
     String  filterString = "RowFilter ('>=' , 'binaryoperator:region')";
     try {
       doTestFilter(filterString, RowFilter.class);
@@ -584,7 +613,7 @@ public class TestParseFilter {
 
     PrefixFilter prefixFilter = (PrefixFilter)filters.get(0);
     byte [] prefix = prefixFilter.getPrefix();
-    assertEquals(new String(prefix), "realtime");
+    assertEquals("realtime", new String(prefix, StandardCharsets.UTF_8));
   }
 
   @Test
@@ -606,41 +635,40 @@ public class TestParseFilter {
 
     PrefixFilter prefixFilter = (PrefixFilter)filters.get(0);
     byte [] prefix = prefixFilter.getPrefix();
-    assertEquals(new String(prefix), "realtime");
+    assertEquals("realtime", new String(prefix, StandardCharsets.UTF_8));
 
     SkipFilter skipFilter = (SkipFilter)filters.get(1);
     assertTrue(skipFilter.getFilter() instanceof FirstKeyOnlyFilter);
   }
 
   @Test
-  public void testUnescapedQuote1 () throws IOException {
+  public void testUnescapedQuote1() throws IOException {
     String filterString = "InclusiveStopFilter ('row''3')";
     InclusiveStopFilter inclusiveStopFilter =
       doTestFilter(filterString, InclusiveStopFilter.class);
     byte [] stopRowKey = inclusiveStopFilter.getStopRowKey();
-    assertEquals(new String(stopRowKey), "row'3");
+    assertEquals("row'3", new String(stopRowKey, StandardCharsets.UTF_8));
   }
 
   @Test
-  public void testUnescapedQuote2 () throws IOException {
+  public void testUnescapedQuote2() throws IOException {
     String filterString = "InclusiveStopFilter ('row''3''')";
     InclusiveStopFilter inclusiveStopFilter =
       doTestFilter(filterString, InclusiveStopFilter.class);
     byte [] stopRowKey = inclusiveStopFilter.getStopRowKey();
-    assertEquals(new String(stopRowKey), "row'3'");
+    assertEquals("row'3'", new String(stopRowKey, StandardCharsets.UTF_8));
   }
 
   @Test
-  public void testUnescapedQuote3 () throws IOException {
+  public void testUnescapedQuote3() throws IOException {
     String filterString = " InclusiveStopFilter ('''')";
-    InclusiveStopFilter inclusiveStopFilter =
-      doTestFilter(filterString, InclusiveStopFilter.class);
+    InclusiveStopFilter inclusiveStopFilter = doTestFilter(filterString, InclusiveStopFilter.class);
     byte [] stopRowKey = inclusiveStopFilter.getStopRowKey();
-    assertEquals(new String(stopRowKey), "'");
+    assertEquals("'", new String(stopRowKey, StandardCharsets.UTF_8));
   }
 
   @Test
-  public void testIncorrectFilterString () throws IOException {
+  public void testIncorrectFilterString() throws IOException {
     String filterString = "()";
     byte [] filterStringAsByteArray = Bytes.toBytes(filterString);
     try {
@@ -652,23 +680,34 @@ public class TestParseFilter {
   }
 
   @Test
-  public void testCorrectFilterString () throws IOException {
+  public void testCorrectFilterString() throws IOException {
     String filterString = "(FirstKeyOnlyFilter())";
-    FirstKeyOnlyFilter firstKeyOnlyFilter =
-      doTestFilter(filterString, FirstKeyOnlyFilter.class);
+    FirstKeyOnlyFilter firstKeyOnlyFilter = doTestFilter(filterString, FirstKeyOnlyFilter.class);
   }
-  
+
   @Test
   public void testRegisterFilter() {
     ParseFilter.registerFilter("MyFilter", "some.class");
-    
+
     assertTrue(f.getSupportedFilters().contains("MyFilter"));
   }
 
-  private <T extends Filter> T doTestFilter(String filterString, Class<T> clazz) throws IOException {
+  private <T extends Filter> T doTestFilter(String filterString, Class<T> clazz)
+      throws IOException {
     byte [] filterStringAsByteArray = Bytes.toBytes(filterString);
     filter = f.parseFilterString(filterStringAsByteArray);
     assertEquals(clazz, filter.getClass());
     return clazz.cast(filter);
+  }
+
+  @Test
+  public void testColumnValueFilter() throws IOException {
+    String filterString = "ColumnValueFilter ('family', 'qualifier', <, 'binaryprefix:value')";
+    ColumnValueFilter cvf = doTestFilter(filterString, ColumnValueFilter.class);
+    assertEquals("family", new String(cvf.getFamily(), StandardCharsets.UTF_8));
+    assertEquals("qualifier", new String(cvf.getQualifier(), StandardCharsets.UTF_8));
+    assertEquals(CompareOperator.LESS, cvf.getCompareOperator());
+    assertTrue(cvf.getComparator() instanceof BinaryPrefixComparator);
+    assertEquals("value", new String(cvf.getComparator().getValue(), StandardCharsets.UTF_8));
   }
 }
