@@ -1,4 +1,4 @@
-/**
+/*
  * Licensed to the Apache Software Foundation (ASF) under one
  * or more contributor license agreements.  See the NOTICE file
  * distributed with this work for additional information
@@ -15,63 +15,66 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-
 package org.apache.hadoop.hbase.master.assignment;
 
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertTrue;
-
+import java.io.IOException;
+import java.util.ArrayList;
 import java.util.List;
-
-import org.apache.commons.logging.Log;
-import org.apache.commons.logging.LogFactory;
 import org.apache.hadoop.conf.Configuration;
-import org.apache.hadoop.hbase.CategoryBasedTimeout;
+import org.apache.hadoop.hbase.HBaseClassTestRule;
 import org.apache.hadoop.hbase.HBaseTestingUtility;
-import org.apache.hadoop.hbase.HColumnDescriptor;
 import org.apache.hadoop.hbase.HConstants;
-import org.apache.hadoop.hbase.HTableDescriptor;
 import org.apache.hadoop.hbase.MetaTableAccessor;
 import org.apache.hadoop.hbase.TableName;
 import org.apache.hadoop.hbase.client.Admin;
+import org.apache.hadoop.hbase.client.ColumnFamilyDescriptorBuilder;
+import org.apache.hadoop.hbase.client.Put;
 import org.apache.hadoop.hbase.client.RegionInfo;
+import org.apache.hadoop.hbase.client.Table;
+import org.apache.hadoop.hbase.client.TableDescriptor;
+import org.apache.hadoop.hbase.client.TableDescriptorBuilder;
 import org.apache.hadoop.hbase.master.procedure.MasterProcedureConstants;
 import org.apache.hadoop.hbase.master.procedure.MasterProcedureEnv;
 import org.apache.hadoop.hbase.master.procedure.MasterProcedureTestingUtility;
 import org.apache.hadoop.hbase.procedure2.ProcedureExecutor;
 import org.apache.hadoop.hbase.procedure2.ProcedureMetrics;
 import org.apache.hadoop.hbase.procedure2.ProcedureTestingUtility;
+import org.apache.hadoop.hbase.regionserver.HRegion;
+import org.apache.hadoop.hbase.testclassification.LargeTests;
 import org.apache.hadoop.hbase.testclassification.MasterTests;
-import org.apache.hadoop.hbase.testclassification.MediumTests;
 import org.apache.hadoop.hbase.util.Bytes;
-import org.apache.hadoop.hbase.util.Pair;
+import org.apache.hadoop.hbase.util.Threads;
 import org.junit.After;
 import org.junit.AfterClass;
 import org.junit.Before;
 import org.junit.BeforeClass;
+import org.junit.ClassRule;
 import org.junit.Rule;
 import org.junit.Test;
 import org.junit.experimental.categories.Category;
 import org.junit.rules.TestName;
-import org.junit.rules.TestRule;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
-@Category({MasterTests.class, MediumTests.class})
+@Category({MasterTests.class, LargeTests.class})
 public class TestMergeTableRegionsProcedure {
-  private static final Log LOG = LogFactory.getLog(TestMergeTableRegionsProcedure.class);
-  @Rule public final TestRule timeout = CategoryBasedTimeout.builder().
-      withTimeout(this.getClass()).withLookingForStuckThread(true).build();
-  @Rule public final TestName name = new TestName();
 
-  protected static final HBaseTestingUtility UTIL = new HBaseTestingUtility();
-  private static long nonceGroup = HConstants.NO_NONCE;
-  private static long nonce = HConstants.NO_NONCE;
+  @ClassRule
+  public static final HBaseClassTestRule CLASS_RULE =
+      HBaseClassTestRule.forClass(TestMergeTableRegionsProcedure.class);
+
+  private static final Logger LOG = LoggerFactory.getLogger(TestMergeTableRegionsProcedure.class);
+  @Rule
+  public final TestName name = new TestName();
+
+  private static final HBaseTestingUtility UTIL = new HBaseTestingUtility();
 
   private static final int initialRegionCount = 4;
   private final static byte[] FAMILY = Bytes.toBytes("FAMILY");
-  final static Configuration conf = UTIL.getConfiguration();
   private static Admin admin;
 
-  private AssignmentManager am;
   private ProcedureMetrics mergeProcMetrics;
   private ProcedureMetrics assignProcMetrics;
   private ProcedureMetrics unassignProcMetrics;
@@ -92,32 +95,27 @@ public class TestMergeTableRegionsProcedure {
 
   @BeforeClass
   public static void setupCluster() throws Exception {
-    setupConf(conf);
+    setupConf(UTIL.getConfiguration());
     UTIL.startMiniCluster(1);
-    admin = UTIL.getHBaseAdmin();
+    admin = UTIL.getAdmin();
   }
 
   @AfterClass
   public static void cleanupTest() throws Exception {
-    try {
-      UTIL.shutdownMiniCluster();
-    } catch (Exception e) {
-      LOG.warn("failure shutting down cluster", e);
-    }
+    UTIL.shutdownMiniCluster();
   }
 
   @Before
   public void setup() throws Exception {
     resetProcExecutorTestingKillFlag();
-    nonceGroup =
-        MasterProcedureTestingUtility.generateNonceGroup(UTIL.getHBaseCluster().getMaster());
-    nonce = MasterProcedureTestingUtility.generateNonce(UTIL.getHBaseCluster().getMaster());
+    MasterProcedureTestingUtility.generateNonceGroup(UTIL.getHBaseCluster().getMaster());
+    MasterProcedureTestingUtility.generateNonce(UTIL.getHBaseCluster().getMaster());
     // Turn off balancer so it doesn't cut in and mess up our placements.
-    UTIL.getHBaseAdmin().setBalancerRunning(false, true);
+    admin.balancerSwitch(false, true);
     // Turn off the meta scanner so it don't remove parent on us.
     UTIL.getHBaseCluster().getMaster().setCatalogJanitorEnabled(false);
     resetProcExecutorTestingKillFlag();
-    am = UTIL.getHBaseCluster().getMaster().getAssignmentManager();
+    AssignmentManager am = UTIL.getHBaseCluster().getMaster().getAssignmentManager();
     mergeProcMetrics = am.getAssignmentManagerMetrics().getMergeProcMetrics();
     assignProcMetrics = am.getAssignmentManagerMetrics().getAssignProcMetrics();
     unassignProcMetrics = am.getAssignmentManagerMetrics().getUnassignProcMetrics();
@@ -126,7 +124,7 @@ public class TestMergeTableRegionsProcedure {
   @After
   public void tearDown() throws Exception {
     resetProcExecutorTestingKillFlag();
-    for (HTableDescriptor htd: UTIL.getHBaseAdmin().listTables()) {
+    for (TableDescriptor htd: admin.listTableDescriptors()) {
       LOG.info("Tear down, remove table=" + htd.getTableName());
       UTIL.deleteTable(htd.getTableName());
     }
@@ -138,41 +136,68 @@ public class TestMergeTableRegionsProcedure {
     assertTrue("expected executor to be running", procExec.isRunning());
   }
 
+  private int loadARowPerRegion(final Table t, List<RegionInfo> ris)
+      throws IOException {
+    List<Put> puts = new ArrayList<>();
+    for (RegionInfo ri: ris) {
+      Put put = new Put(ri.getStartKey() == null || ri.getStartKey().length == 0?
+          new byte [] {'a'}: ri.getStartKey());
+      put.addColumn(HConstants.CATALOG_FAMILY, HConstants.CATALOG_FAMILY,
+          HConstants.CATALOG_FAMILY);
+      puts.add(put);
+    }
+    t.put(puts);
+    return puts.size();
+  }
+
+
   /**
    * This tests two region merges
    */
   @Test
   public void testMergeTwoRegions() throws Exception {
     final TableName tableName = TableName.valueOf(this.name.getMethodName());
-    final ProcedureExecutor<MasterProcedureEnv> procExec = getMasterProcedureExecutor();
+    UTIL.createTable(tableName, new byte[][]{HConstants.CATALOG_FAMILY},
+        new byte[][]{new byte[]{'b'}, new byte[]{'c'}, new byte[]{'d'}, new byte[]{'e'}});
+    testMerge(tableName, 2);
+  }
 
-    List<RegionInfo> tableRegions = createTable(tableName);
-
-    RegionInfo[] regionsToMerge = new RegionInfo[2];
-    regionsToMerge[0] = tableRegions.get(0);
-    regionsToMerge[1] = tableRegions.get(1);
+  private void testMerge(TableName tableName, int mergeCount) throws IOException {
+    List<RegionInfo> ris = MetaTableAccessor.getTableRegions(UTIL.getConnection(), tableName);
+    int originalRegionCount = ris.size();
+    assertTrue(originalRegionCount > mergeCount);
+    RegionInfo[] regionsToMerge = ris.subList(0, mergeCount).toArray(new RegionInfo [] {});
+    int countOfRowsLoaded = 0;
+    try (Table table = UTIL.getConnection().getTable(tableName)) {
+      countOfRowsLoaded = loadARowPerRegion(table, ris);
+    }
+    assertEquals(countOfRowsLoaded, UTIL.countRows(tableName));
 
     // collect AM metrics before test
     collectAssignmentManagerMetrics();
-
+    final ProcedureExecutor<MasterProcedureEnv> procExec = getMasterProcedureExecutor();
     MergeTableRegionsProcedure proc =
         new MergeTableRegionsProcedure(procExec.getEnvironment(), regionsToMerge, true);
     long procId = procExec.submitProcedure(proc);
     ProcedureTestingUtility.waitProcedure(procExec, procId);
     ProcedureTestingUtility.assertProcNotFailed(procExec, procId);
-    assertRegionCount(tableName, initialRegionCount - 1);
+    MetaTableAccessor.fullScanMetaAndPrint(UTIL.getConnection());
+    assertEquals(originalRegionCount - mergeCount + 1,
+        MetaTableAccessor.getTableRegions(UTIL.getConnection(), tableName).size());
 
     assertEquals(mergeSubmittedCount + 1, mergeProcMetrics.getSubmittedCounter().getCount());
     assertEquals(mergeFailedCount, mergeProcMetrics.getFailedCounter().getCount());
     assertEquals(assignSubmittedCount + 1, assignProcMetrics.getSubmittedCounter().getCount());
     assertEquals(assignFailedCount, assignProcMetrics.getFailedCounter().getCount());
-    assertEquals(unassignSubmittedCount + 2, unassignProcMetrics.getSubmittedCounter().getCount());
+    assertEquals(unassignSubmittedCount + mergeCount,
+        unassignProcMetrics.getSubmittedCounter().getCount());
     assertEquals(unassignFailedCount, unassignProcMetrics.getFailedCounter().getCount());
 
-    Pair<RegionInfo, RegionInfo> pair =
-      MetaTableAccessor.getRegionsFromMergeQualifier(UTIL.getConnection(),
-        proc.getMergedRegion().getRegionName());
-    assertTrue(pair.getFirst() != null && pair.getSecond() != null);
+    // Need to get the references cleaned out. Close of region will move them
+    // to archive so disable and reopen just to get rid of references to later
+    // when the catalogjanitor runs, it can do merged region cleanup.
+    admin.disableTable(tableName);
+    admin.enableTable(tableName);
 
     // Can I purge the merged regions from hbase:meta? Check that all went
     // well by looking at the merged row up in hbase:meta. It should have no
@@ -180,10 +205,24 @@ public class TestMergeTableRegionsProcedure {
     // the merged regions cleanup.
     UTIL.getHBaseCluster().getMaster().setCatalogJanitorEnabled(true);
     UTIL.getHBaseCluster().getMaster().getCatalogJanitor().triggerNow();
-    while (pair != null && pair.getFirst() != null && pair.getSecond() != null) {
-      pair = MetaTableAccessor.getRegionsFromMergeQualifier(UTIL.getConnection(),
-          proc.getMergedRegion().getRegionName());
+    byte [] mergedRegion = proc.getMergedRegion().getRegionName();
+    while (ris != null && ris.get(0) != null && ris.get(1) != null) {
+      ris = MetaTableAccessor.getMergeRegions(UTIL.getConnection(), mergedRegion);
+      LOG.info("{} {}", Bytes.toStringBinary(mergedRegion), ris);
+      Threads.sleep(1000);
     }
+    assertEquals(countOfRowsLoaded, UTIL.countRows(tableName));
+  }
+
+  /**
+   * This tests ten region merges in one go.
+   */
+  @Test
+  public void testMergeTenRegions() throws Exception {
+    final TableName tableName = TableName.valueOf(this.name.getMethodName());
+    final ProcedureExecutor<MasterProcedureEnv> procExec = getMasterProcedureExecutor();
+    UTIL.createMultiRegionTable(tableName, HConstants.CATALOG_FAMILY);
+    testMerge(tableName, 10);
   }
 
   /**
@@ -232,6 +271,7 @@ public class TestMergeTableRegionsProcedure {
     List<RegionInfo> tableRegions = createTable(tableName);
 
     ProcedureTestingUtility.waitNoProcedureRunning(procExec);
+    ProcedureTestingUtility.setKillIfHasParent(procExec, false);
     ProcedureTestingUtility.setKillAndToggleBeforeStoreUpdate(procExec, true);
 
     RegionInfo[] regionsToMerge = new RegionInfo[2];
@@ -266,15 +306,19 @@ public class TestMergeTableRegionsProcedure {
       new MergeTableRegionsProcedure(procExec.getEnvironment(), regionsToMerge, true));
 
     // Failing before MERGE_TABLE_REGIONS_UPDATE_META we should trigger the rollback
-    // NOTE: the 5 (number before MERGE_TABLE_REGIONS_UPDATE_META step) is
+    // NOTE: the 8 (number of MERGE_TABLE_REGIONS_UPDATE_META step) is
     // hardcoded, so you have to look at this test at least once when you add a new step.
-    int numberOfSteps = 5;
-    MasterProcedureTestingUtility.testRollbackAndDoubleExecution(procExec, procId, numberOfSteps);
+    int lastStep = 8;
+    MasterProcedureTestingUtility.testRollbackAndDoubleExecution(procExec, procId, lastStep, true);
+    assertEquals(initialRegionCount, UTIL.getAdmin().getRegions(tableName).size());
+    UTIL.waitUntilAllRegionsAssigned(tableName);
+    List<HRegion> regions = UTIL.getMiniHBaseCluster().getRegions(tableName);
+    assertEquals(initialRegionCount, regions.size());
   }
 
   @Test
   public void testMergeWithoutPONR() throws Exception {
-    final TableName tableName = TableName.valueOf("testRecoveryAndDoubleExecution");
+    final TableName tableName = TableName.valueOf("testMergeWithoutPONR");
     final ProcedureExecutor<MasterProcedureEnv> procExec = getMasterProcedureExecutor();
 
     List<RegionInfo> tableRegions = createTable(tableName);
@@ -287,7 +331,7 @@ public class TestMergeTableRegionsProcedure {
     regionsToMerge[1] = tableRegions.get(1);
 
     long procId = procExec.submitProcedure(
-        new MergeTableRegionsProcedure(procExec.getEnvironment(), regionsToMerge, true));
+      new MergeTableRegionsProcedure(procExec.getEnvironment(), regionsToMerge, true));
 
     // Execute until step 9 of split procedure
     // NOTE: step 9 is after step MERGE_TABLE_REGIONS_UPDATE_META
@@ -301,10 +345,9 @@ public class TestMergeTableRegionsProcedure {
     assertRegionCount(tableName, initialRegionCount - 1);
   }
 
-  private List<RegionInfo> createTable(final TableName tableName)
-      throws Exception {
-    HTableDescriptor desc = new HTableDescriptor(tableName);
-    desc.addFamily(new HColumnDescriptor(FAMILY));
+  private List<RegionInfo> createTable(final TableName tableName) throws Exception {
+    TableDescriptor desc = TableDescriptorBuilder.newBuilder(tableName)
+      .setColumnFamily(ColumnFamilyDescriptorBuilder.of(FAMILY)).build();
     byte[][] splitRows = new byte[initialRegionCount - 1][];
     for (int i = 0; i < splitRows.length; ++i) {
       splitRows[i] = Bytes.toBytes(String.format("%d", i));
